--- a/i18n/plugins/org.talend.core.repository.nl/src/main/java/org/talend/core/repository/i18n/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.core.repository.nl/src/main/java/org/talend/core/repository/i18n/messages_zh_CN.properties
@@ -187,7 +187,7 @@ ProjectRepositoryNode.sapFunctions.outputSchema=\u8F93\u51FA
 ProjectRepositoryNode.sapTables=SAP \u8868
 DuplicateAction.input.title.v2=\u590D\u5236
 DuplicateAction.SameAsProjectname=\u540D\u79F0\u4E0E\u5DE5\u7A0B\u540D\u79F0\u76F8\u540C\u3002
-DeleteAction.error.testCaseLockedOrOpenedObject.newMessage=\u6D4B\u8BD5\u7528\u4F8B{0}\u88AB\u9501\u5B9A\uFF0C\u56E0\u6B64\u60A8\u65E0\u6CD5\u5220\u9664\u5B83.\n\u5982\u679C\u6B64\u5BF9\u8C61\u88AB\u6253\u5F00\uFF0C\u60A8\u5FC5\u987B\u5728\u5220\u9664\u4E4B\u524D\u5173\u95ED\u5B83\u3002
+DeleteAction.error.testCaseLockedOrOpenedObject.newMessage=\u6D4B\u8BD5\u7528\u4F8B{0}\u88AB\u9501\u5B9A\uFF0C\u56E0\u6B64\u60A8\u65E0\u6CD5\u5220\u9664\u5B83.\\n\u5982\u679C\u6B64\u5BF9\u8C61\u88AB\u6253\u5F00\uFF0C\u60A8\u5FC5\u987B\u5728\u5220\u9664\u4E4B\u524D\u5173\u95ED\u5B83\u3002
 ProjectRepositoryNode.sapBWDataSource=SAP DataSource
 ProjectRepositoryNode.sapBWDataStoreObject=SAP DSO
 ProjectRepositoryNode.sapBWInfoCube=SAP InfoCube
