--- a/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_zh_CN.properties
@@ -1,4 +1,4 @@
-AbstractBrandingService_job_license_header_content=// ============================================================================\n//\n// Copyright (c) 2005-2010, Talend Inc.\n//\n// \u672C\u6BB5\u6E90\u4EE3\u7801\u662F\u7531{0}\u81EA\u52A8\u751F\u6210\n// / \u4F5C\u4E1A\u8BBE\u8BA1\u5668 (\u4EE3\u7801\u751F\u6210\u5668\u7248\u672C{1})\n// \u4F60\u53EF\u4EE5\u627E\u5230\u66F4\u591ATalend\u4EA7\u54C1\u4FE1\u606F\u5728www.talend.com.\n// \u60A8\u53EF\u4EE5\u6839\u636EGNU LGPL\u8BB8\u53EF\u7684\u6761\u6B3E\u53D1\u5E03\u6B64\u4EE3\u7801\n// http://www.gnu.org/licenses/lgpl.html).\n//\n// ============================================================================
+AbstractBrandingService_job_license_header_content=// ============================================================================\\n//\\n// Copyright (c) 2005-2010, Talend Inc.\\n//\\n// \u672C\u6BB5\u6E90\u4EE3\u7801\u662F\u7531{0}\u81EA\u52A8\u751F\u6210\\n// / \u4F5C\u4E1A\u8BBE\u8BA1\u5668 (\u4EE3\u7801\u751F\u6210\u5668\u7248\u672C{1})\\n// \u4F60\u53EF\u4EE5\u627E\u5230\u66F4\u591ATalend\u4EA7\u54C1\u4FE1\u606F\u5728www.talend.com.\\n// \u60A8\u53EF\u4EE5\u6839\u636EGNU LGPL\u8BB8\u53EF\u7684\u6761\u6B3E\u53D1\u5E03\u6B64\u4EE3\u7801\\n// http://www.gnu.org/licenses/lgpl.html).\\n//\\n// ============================================================================
 AbstractComponentsProvider.folderNotExist=\u6587\u4EF6\u5939{0}\u4E0D\u5B58\u5728.
 AbstractItemMigrationTask.taskFailed=\u8FC1\u79FB{0}\u9879\u76EE\u5931\u8D25{1}
 AdvancedSocketFactory.failedInitial=\u9519\u8BEF\uFF1A\u65E0\u6CD5\u521D\u59CB\u5316\uFF1A
@@ -20,7 +20,7 @@ ColorsCodeViewerPreferencePage.keyword2Color=\u5173\u952E\u5B572 \u989C\u8272
 ColorsCodeViewerPreferencePage.keyword3Color=\u5173\u952E\u5B573 \u989C\u8272
 ColumnNameChangedExt.columnChanged=\u7ED3\u70B9: {0} \u5217\u6539\u53D8: {1}-> {2}
 ComponentsFormatPreferencePage.add=\u589E\u52A0
-ComponentsFormatPreferencePage.errorCreateConnectionName=\u547D\u540D"{0}"\u65E0\u6548
+ComponentsFormatPreferencePage.errorCreateConnectionName=\u547D\u540D\"{0}\"\u65E0\u6548
 ComponentsFormatPreferencePage.formatConnection=\u683C\u5F0F\u5316\u9ED8\u8BA4\u8FDE\u63A5
 ComponentsFormatPreferencePage.formatHint=\u683C\u5F0F\u63D0\u793A\u9ED8\u8BA4\u503C\uFF1A
 ComponentsFormatPreferencePage.formatLable=\u683C\u5F0F\u5316\u9ED8\u8BA4\u6807\u7B7E
@@ -33,7 +33,7 @@ ContextComposite.treeValue=\u6811\u683C\u5F0F\u503C
 ContextComposite.variable=\u53D8\u91CF
 ContextParameterProposal.ContextVariable=\\n\\n\u4E0A\u4E0B\u6587\u53D8\u91CF\u3002
 ContextParameterProposal.Description=\u63CF\u8FF0\uFF1A{0}
-ContextValueErrorChecker.ErrorTitile=\u4E0A\u4E0B\u6587\u503C\u9519\u8BEF: 
+ContextValueErrorChecker.ErrorTitile=\u4E0A\u4E0B\u6587\u503C\u9519\u8BEF:
 ContextParameterProposal.NoCommentAvaiable=\u6CA1\u6709\u6CE8\u91CA\u3002
 ContextParameterProposal.Type=\\n\u7C7B\u578B\uFF1A{1}
 ContextParameterProposal.VariableName=\\n\\n\u53D8\u91CF\u540D\u79F0\uFF1A{2}
@@ -225,7 +225,7 @@ MetadataTalendTypeEditor.editMappingDialog.title=\u7F16\u8F91Mapping\u6587\u4EF6
 MetadataTalendTypeEditor.error.message=\u9519\u8BEF\u4FE1\u606F
 MetadataTalendTypeEditor.fileIsImported=\u6587\u4EF6\u5DF2\u5B58\u5728\u3002
 MetadataTalendTypeEditor.fileIsInvalid=\u5BFC\u5165\u6587\u4EF6\u4E0D\u5408\u6CD5\u3002
-MetadataTalendTypeEditor.fileNameStartRule=\u6587\u4EF6\u540D\u5FC5\u987B\u4EE5'mapping_'\u5F00\u5934\u3002
+MetadataTalendTypeEditor.fileNameStartRule=\u6587\u4EF6\u540D\u5FC5\u987B\u4EE5\'mapping_\'\u5F00\u5934\u3002
 MetadataTool.errorMessage=\u65E0\u6CD5\u8F93\u5165\u5F53\u524D\u5B57\u7B26\u3002
 MetadataTool.invalid=\u65E0\u6548\u503C
 MetadataTool.invalidChar=\u65E0\u6548\u5B57\u7B26
@@ -318,7 +318,6 @@ SchemaOperationChoiceDialog.EditSchemaMessage=\u7F16\u8F91 schema\u3002
 SchemaOperationChoiceDialog.Message=\u8BF7\u9009\u62E9\u4E00\u4E2A\u9009\u9879\u6216\u53D6\u6D88\u3002
 SchemaOperationChoiceDialog.Option=\u9009\u9879
 SchemaOperationChoiceDialog.StatusMessage=\u65E0\u6548\u6216\u5DF2\u5B58\u5728\u7684\u56FE\u89E3
-SchemaOperationChoiceDialog.Title=\u67B6\u6784
 SchemaOperationChoiceDialog.ViewSchemaMessage=\u67E5\u770B schema (\u53EA\u8BFB)\u3002
 SchemaXPathQuerysDialog.Mappings=\u6620\u5C04
 SelectRepositoryContextDialog.DeselectAll=\u5168\u90E8\u4E0D\u9009
@@ -418,7 +417,6 @@ repository.tdqelement.businessrule=TDQ \u4E1A\u52A1\u89C4\u5219
 repository.tdqelement.indicator=TDQ \u6307\u6807
 repository.tdqelement.pattern=TDQ \u6A21\u5F0F
 EUpdateItemType.Property=\u5C5E\u6027
-EUpdateItemType.Schema=\u67B6\u6784
 EUpdateItemType.SAPFunction=SAP \u51FD\u6570
 EUpdateItemType.SAPIDoc=SAP IDoc
 EUpdateItemType.Query=\u67E5\u8BE2
@@ -486,7 +484,7 @@ BusinessAppearanceComposite.textAlignment.horizontal.centre=\u4E2D\u592E
 BusinessAppearanceComposite.textAlignment.vertical.top=\u9876\u90E8
 BusinessAppearanceComposite.textAlignment.vertical.bottom=\u5E95\u90E8
 BusinessAppearanceComposite.textAlignment.vertical.centre=\u4E2D\u592E
-ConnectionBean.Local= \u672C\u5730
+ConnectionBean.Local=\u672C\u5730
 ConnectionBean.Remote=\u8FDC\u7A0B
 ConnectionBean.DefaultConnection=\u9ED8\u8BA4\u8FDE\u63A5
 InegerCellEditorListener.NegativeNumberMessage={0} \u7684\u503C\u4E0D\u80FD\u8BBE\u5B9A\u4E3A\u8D1F\u6570\u3002
@@ -537,9 +535,9 @@ LibrariesListSelectionDialog.browseButton.text=\u6D4F\u89C8...
 LibrariesListSelectionDialog.deployLibs=\u90E8\u7F72\u5E93...
 PigFunctionParser.checkMethod=Pig\uFF1A\"{0}.{1}\\\\\" \u89E3\u6790\u5931\u8D25\u3002\u8BF7\u68C0\u67E5\u60A8\u7684\u65B9\u6CD5\u3002
 GenerateSelectSQLAction.NewQuery=\u65B0\u67E5\u8BE2 {0}
-AbstractTalendFunctionParser.checkMethod=Runtines\uFF1A"{0}. {1}\\",\u89E3\u6790\u5931\u8D25\u3002 \u8BF7\u68C0\u67E5\u60A8\u7684\u65B9\u6CD5\u3002
+AbstractTalendFunctionParser.checkMethod=Runtines\uFF1A\"{0}. {1}\\\\\",\u89E3\u6790\u5931\u8D25\u3002 \u8BF7\u68C0\u67E5\u60A8\u7684\u65B9\u6CD5\u3002
 UpdatesConstants.MR=Map_Reduce
-AbstractBrandingService.routines_license_header_content2014=\u672C\u6BB5\u6E90\u4EE3\u7801\u662F\u7531{0}\u81EA\u52A8\u751F\u6210\n// / \u4F5C\u4E1A\u8BBE\u8BA1\u5668 (\u4EE3\u7801\u751F\u6210\u5668\u7248\u672C{1})\n// \u4F60\u53EF\u4EE5\u627E\u5230\u66F4\u591ATalend\u4EA7\u54C1\u4FE1\u606F\u5728www.talend.com.\n// \u60A8\u53EF\u4EE5\u6839\u636EGNU LGPL\u8BB8\u53EF\u7684\u6761\u6B3E\u53D1\u5E03\u6B64\u4EE3\u7801\n// http://www.gnu.org/licenses/lgpl.html).
+AbstractBrandingService.routines_license_header_content2014=\u672C\u6BB5\u6E90\u4EE3\u7801\u662F\u7531{0}\u81EA\u52A8\u751F\u6210\\n// / \u4F5C\u4E1A\u8BBE\u8BA1\u5668 (\u4EE3\u7801\u751F\u6210\u5668\u7248\u672C{1})\\n// \u4F60\u53EF\u4EE5\u627E\u5230\u66F4\u591ATalend\u4EA7\u54C1\u4FE1\u606F\u5728www.talend.com.\\n// \u60A8\u53EF\u4EE5\u6839\u636EGNU LGPL\u8BB8\u53EF\u7684\u6761\u6B3E\u53D1\u5E03\u6B64\u4EE3\u7801\\n// http://www.gnu.org/licenses/lgpl.html).
 repository.tdqelement.sourceFile=\u6E90\u6587\u4EF6
 repository.tdqelement.jrxml=JRXML\u6A21\u677F
 repository.dataprofiling=\u6570\u636E\u5256\u6790
@@ -570,7 +568,7 @@ repository.systemIndicators.phoneNumberStatistics=\u7535\u8BDD\u53F7\u7801\u7EDF
 repository.systemIndicators.fraudDetection=\u6B3A\u8BC8\u68C0\u6D4B
 EUpdateItemType.MapPath=\u5730\u56FE\u8DEF\u5F84
 EUpdateResult.PathUpdate=\u9488\u5BF9\u6620\u5C04\u8DEF\u5F84\u66F4\u65B0
-AContextualAction.EditorManager_saveChangesQuestion='{0}' \u88AB\u4FEE\u6539.\u662F\u5426\u4FDD\u5B58?
+AContextualAction.EditorManager_saveChangesQuestion=\'\'{0}\'\' \u88AB\u4FEE\u6539.\u662F\u5426\u4FDD\u5B58?
 AContextualAction.Save_Resource=\u4FDD\u5B58\u8D44\u6E90
 EConnectionType.tableRefMenu=Table_ref
 EComponentCategory.stormConfig=Storm\u914D\u7F6E
