--- a/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_pt_BR.properties
+++ b/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_pt_BR.properties
@@ -132,3 +132,4 @@ TalendDataCollectorPreviewPreferencePage_Value=Valor
 repository.servicesPort=Porta
 EMetadataEncoding.Latin9=latin9
 ModuleListCellEditor.add=Adicionar
+ModuleListCellEditor.delete=Deletar
