--- a/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_ro.properties
+++ b/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_ro.properties
@@ -48,3 +48,4 @@ TalendDataCollectorPreviewPreferencePage_Key=Cheie
 TalendDataCollectorPreviewPreferencePage_Value=Parola
 repository.servicesPort=port
 ModuleListCellEditor.add=Adauga
+ModuleListCellEditor.delete=sterge
