--- a/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_tr.properties
+++ b/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_tr.properties
@@ -33,3 +33,4 @@ BusinessAppearanceComposite.textAlignment.vertical.centre=Orta
 RepositoryContentProvider.repositoryLabel.Queries=Sorgular
 repository.servicesPort=Port
 ModuleListCellEditor.add=Ekle
+ModuleListCellEditor.delete=Sil
