--- a/i18n/plugins/org.talend.librariesmanager.ui.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.librariesmanager.ui.nl/src/main/java/messages_zh_CN.properties
@@ -17,14 +17,14 @@ ExternalModulesInstallDialog_ColumnRequiredBy=\u7EC4\u4EF6\u9700\u8981
 ExternalModulesInstallDialog_ColumnUrl=\u66F4\u591A\u4FE1\u606F
 ExternalModulesInstallDialog_Download=\u4E0B\u8F7D\u4E0E\u5B89\u88C5
 ExternalModulesInstallDialog_DownloadFailed=\u5B89\u88C5\u4E0B\u5217\u6A21\u5757\u65F6\u51FA\u9519\uFF1A
-ExternalModulesInstallDialog_DownloadSuccess=\ \u6A21\u5757\u5B89\u88C5\u6210\u529F \! \n
+ExternalModulesInstallDialog_DownloadSuccess=\\ \u6A21\u5757\u5B89\u88C5\u6210\u529F \\! \\n
 ExternalModulesInstallDialog_InstallAll=\u4E0B\u8F7D\u5E76\u5B89\u88C5\u6240\u6709\u7684\u6A21\u5757\u53EF\u7528
 ExternalModulesInstallDialog_MoreInfor=<a>\u70B9\u51FB\u8FD9\u91CC\u83B7\u53D6\u5173\u4E8E\u5916\u90E8\u6A21\u5757\u7684\u66F4\u591A\u4FE1\u606F</a>
 ExternalModulesInstallDialog_NoExternalModules=\u6CA1\u6709\u53EF\u7528\u7684\u5916\u90E8\u6A21\u5757
 ExternalModulesInstallDialog_Download_Ok=\u5B89\u88C5\u6210\u529F\uFF01
 ExternalModulesInstallDialog_Download_Fialed=\u5B89\u88C5\u5931\u8D25 !
 ExternalModulesInstallDialog_Title_Missing_jars_for_plugin=\u7F3A\u5C11\u7B2C\u4E09\u65B9\u5E93
-ExternalModulesInstallDialog_description_jars_to_be_installed_in=Studio\u9700\u8981\u5B89\u88C5\u7B2C\u4E09\u65B9\u5E93\u3002\n\u8BF7\u5B89\u88C5\u4E0B\u5217jar\u5305\u5728\u5173\u95ED\u7A97\u53E3\u524D\u3002
+ExternalModulesInstallDialog_description_jars_to_be_installed_in=Studio\u9700\u8981\u5B89\u88C5\u7B2C\u4E09\u65B9\u5E93\u3002\\n\u8BF7\u5B89\u88C5\u4E0B\u5217jar\u5305\u5728\u5173\u95ED\u7A97\u53E3\u524D\u3002
 ExternalModulesInstallDialog_NoAvailabeModulesMessages=Jar\u5305{0}\u4E0D\u53EF\u7528\u3002
 ExternalModulesInstallDialog_NoAvailabeModulesTitle=\u4E0D\u53EF\u7528\u6A21\u5757
 ComponentExternalModulesDialog.doNotShow=\u4E0D\u518D\u663E\u793A
@@ -77,7 +77,7 @@ AcceptModuleLicensesWizardPage.licenseContent.button.accept=\u6211\u63A5\u53D7\u
 AcceptModuleLicensesWizardPage.licenseContent.button.decline=\u6211\u4E0D\u63A5\u53D7\u6240\u9009\u8BB8\u53EF\u534F\u8BAE\u7684\u6761\u6B3E
 AcceptModuleLicensesWizardPage.licenseContent.label=\u8BB8\u53EF\u6587\u4EF6\uFF1A
 AcceptModuleLicensesWizardPage.licenseContent.defaultDesc=\u8BE5\u8BB8\u53EF\u8BC1\u5728\u6A21\u5757\u5B89\u88C5\u4E4B\u524D\u5FC5\u987B\u63A5\u53D7\u5BA1\u67E5\u3002
-AcceptModuleLicensesWizardPage.retrieveLicenses=\u8BF7\u83B7\u53D6\u8BB8\u53EF\u8BC1...\n
+AcceptModuleLicensesWizardPage.retrieveLicenses=\u8BF7\u83B7\u53D6\u8BB8\u53EF\u8BC1...
 AcceptModuleLicensesWizardPage.rejectLicensesConfirmation.title=\u786E\u8BA4
 AcceptModuleLicensesWizardPage.rejectLicensesConfirmation.msg=\u60A8\u5DF2\u7ECF\u62D2\u7EDD\u4E86\u4EE5\u4E0B\u8BB8\u53EF: \u60A8\u786E\u5B9A\u5417?
 ExternalModulesInstallDialog.networkUnavailable.msg=\u7F51\u7EDC\u4E0D\u53EF\u7528\uFF0C\u8BF7\u5148\u4FEE\u590D\u3002
