--- a/i18n/plugins/org.talend.rcp.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.rcp.nl/src/main/java/messages_zh_CN.properties
@@ -79,7 +79,7 @@ WelcomePageDynamicContentProvider.GettingStartedImportDemoTitle=\u6F14\u793A
 WelcomePageDynamicContentProvider.GettingStartedImportDemoBrief=\u5BFC\u5165\u9879\u76EE\u6F14\u793A
 WelcomePageDynamicContentProvider.LatestItemsDataModel.Title=\u6A21\u578B
 WelcomePageDynamicContentProvider.CreateNewDataModelTitle=\u6A21\u578B
-Application.WorkspaceInuseMessage=\u8BE5\u5DE5\u4F5C\u7A7A\u95F4\u5DF2\u88AB\u4F7F\u7528.\n \u4F60\u4E0D\u80FD\u4F7F\u7528\u540C\u4E00\u4E2A\u5DE5\u4F5C\u7A7A\u95F4\u8FD0\u884CStudio 
+Application.WorkspaceInuseMessage=\u8BE5\u5DE5\u4F5C\u7A7A\u95F4\u5DF2\u88AB\u4F7F\u7528.\\n \u4F60\u4E0D\u80FD\u4F7F\u7528\u540C\u4E00\u4E2A\u5DE5\u4F5C\u7A7A\u95F4\u8FD0\u884CStudio
 Application.WorkspaceInuseTitle=\u5DE5\u4F5C\u7A7A\u95F4\u9519\u8BEF
 Application.doNotSupportJavaVersionYetPoweredbyTalend=Studio\u4E0D\u652F\u6301Java 8. Java 7\u662F\u5EFA\u8BAE\u4F7F\u7528\u7684JVM\u7248\u672C\u3002\u6709\u5173\u8BE6\u7EC6\u4FE1\u606F\uFF08\u9700\u8981MyTalend\u5E10\u6237\u6CE8\u518C\uFF09\uFF0C\u8BF7\u53C2\u9605Talend\u5E2E\u52A9\u4E2D\u5FC3\u7684\u4EE5\u4E0BKB\u6587\u7AE0\uFF1A
 Application.doNotSupportJavaVersionYetNoPoweredbyTalend=Studio \u4E0D\u652F\u6301Java8 .Java 7\u662F\u4F7F\u7528\u63A8\u8350\u7684JVM\u7248\u672C\u3002
@@ -112,3 +112,5 @@ LinksToolbarItem_videos=\u94FE\u63A5\u5230 Talend \u6307\u5BFC\u6559\u7A0B
 DynamicContentProvider.tryCloud=\u514D\u8D39\u8BD5\u7528 Talend \u4E91 30 \u5929
 LinksToolbarItem_cloud=\u94FE\u63A5\u5230 Talend \u4E91
 WelcomePageDynamicContentProvider.LatestItemsServices.Title=\u670D\u52A1
+ComponentsManager.form.install.dialog.restart.title=\u91CD\u65B0\u542F\u52A8 Studio
+ComponentsManager.form.install.dialog.restart.message=\u6211\u4EEC\u9700\u8981\u91CD\u65B0\u542F\u52A8 Studio \u4EE5\u5B8C\u6210\u5B89\u88C5\u3002\\n\\n\u662F\u5426\u8981\u7ACB\u5373\u91CD\u65B0\u542F\u52A8 Studio\uFF1F
