--- a/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_zh_CN.properties
@@ -120,19 +120,17 @@ DatabaseTableForm.comment=\u5217\u6CE8\u91CA
 DatabaseTableForm.connectionFailure=\u6570\u636E\u5E93\u8FDE\u63A5\u5931\u8D25:\u201C\u68C0\u7D22Shema\u201D\u88AB\u7981\u7528\uFF0C\u6309\u201C\u68C0\u67E5\u8FDE\u63A5\u201D\u6062\u590D\u8FD9\u79CD\u60C5\u51B5\u3002
 DatabaseTableForm.connectionFailureTip=\u6570\u636e\u5e93\u8fde\u63a5\u5931\u8d25\uff0c\u8bf7\u68c0\u67e5\u6570\u636e\u5e93\u8bbe\u7f6e\u6216\u4e0e\u6570\u636e\u5e93\u7ba1\u7406\u5458\u8054\u7cfb\u3002
 DatabaseTableForm.connectionIsDone=\u8FDE\u63A5\u6210\u529F
-DatabaseTableForm.groupMetaData=\u67B6\u6784
 DatabaseTableForm.metadataDefaultNewLabel=\u65b0\u5217
 DatabaseTableForm.name=\u4f5c\u4e1a\u540d
 DatabaseTableForm.nameAlert=Schema\u540D\u79F0\u4E3A\u7A7A\uFF0C\u5FC5\u987B\u547D\u540D
-DatabaseTableForm.navigatorTree=\u67B6\u6784
 DatabaseTableForm.retreiveButtonAlert=\u8981\u4f7f\u7528\u201c\u53d6\u56de Schema\u201d\u6309\u94ae\uff0c\u8bf7\u5148\u9009\u62e9\u4e00\u4e2a\u8868\u683c\u3002
-DatabaseTableForm.retreiveButtonTip=\u5FC5\u987B\u5B9A\u4E49Schema. \u4F7F\u7528"\u68C0\u7D22Schema"\u6309\u94AE\u4EE5\u8282\u7701\u65F6\u95F4.
+DatabaseTableForm.retreiveButtonTip=\u5FC5\u987B\u5B9A\u4E49Schema. \u4F7F\u7528\"\u68C0\u7D22Schema\"\u6309\u94AE\u4EE5\u8282\u7701\u65F6\u95F4.
 DatabaseTableForm.retreiveButtonUse=\u4f7f\u7528\u201c\u53d6\u56de Schema\u201d\u6309\u94ae,\u7528\u57fa\u4e8e\u8868\u683c\u7684 Schema \u66ff\u6362\u5f53\u524dSchema
 DatabaseTableForm.retreiveSchema=\u521b\u5efa Schema
 DatabaseTableForm.streamDetach=\u6d41\u5206\u9694
 DatabaseTableForm.table=\u57fa\u672c\u8868\u683c
 DatabaseTableForm.tableColumnText.talbe=\u8868\u683C
-DatabaseTableForm.tableNoExist=\u6570\u636E\u5E93\u8FDE\u63A5\u6210\u529F,\u4F46\u6CA1\u6709\u8868\u5B58\u5728 \: "\u68C0\u7D22Shema"\u88AB\u7981\u7528. \n \u4F7F\u7528SGBD\u521B\u5EFA\u8868,\u7136\u540E\u5355\u51FB\u201C\u68C0\u67E5\u8FDE\u63A5\u201D\u91CD\u7F6E.
+DatabaseTableForm.tableNoExist=\u6570\u636E\u5E93\u8FDE\u63A5\u6210\u529F,\u4F46\u6CA1\u6709\u8868\u5B58\u5728 \\: \"\u68C0\u7D22Shema\"\u88AB\u7981\u7528. \\n \u4F7F\u7528SGBD\u521B\u5EFA\u8868,\u7136\u540E\u5355\u51FB\u201C\u68C0\u67E5\u8FDE\u63A5\u201D\u91CD\u7F6E.
 DatabaseTableForm.tableTip=\u9009\u62e9\u4e00\u4e2a\u8868\u683c\u4f7f\u7528 \u53d6\u56de \u6309\u94ae \u6216\u8005 \u624b\u52a8\u8bbe\u7f6e Schema
 DateSection.ModificationLabel=\u4fee\u6539
 DateSection.commitLabel=\u63d0\u4ea4
@@ -253,10 +251,10 @@ FileStep2.limitTip=\u9650\u5236
 FileStep2.mustBePrecised=\u5fc5\u987b\u8bbe\u7f6e
 FileStep2.noresult=\u5f53\u524d\u8bbe\u7f6e\u6ca1\u6709\u7ed3\u679c
 FileStep2.noresultDetailMessage=\u8BF7\u68C0\u67E5\u6B63\u786E\u7684 XPathExpression \u6216 XML \u6E90\u6587\u6863\u3002
-FileStep2.previewFailure=\u9884\u89C8\u9519\u8BEF\u3002\u5FC5\u987B\u4FEE\u6539\u8BBE\u7F6E\u3002\n\uFF08\u9519\u8BEF\u7684\u5B57\u7B26\u7F16\u7801\uFF09
+FileStep2.previewFailure=\u9884\u89C8\u9519\u8BEF\u3002\u5FC5\u987B\u4FEE\u6539\u8BBE\u7F6E\u3002\\n\uFF08\u9519\u8BEF\u7684\u5B57\u7B26\u7F16\u7801\uFF09
 FileStep2.previewIsDone=\u9884\u89c8\u6210\u529f...
 FileStep2.previewProgress=\u9884\u89c8\u5904\u7406\u4e2d...
-FileStep2.quoteDelimitedTip=\u6CA1\u6709\u8F6C\u79FB\u5B57\u7B26\u7684\u60C5\u51B5\u4E0B\uFF0C\u60A8\u4E0D\u80FD\u4F7F\u7528\u5B57\u7B26 \"\u3002\u4F7F\u7528 \\\\\"
+FileStep2.quoteDelimitedTip=\u6CA1\u6709\u8F6C\u79FB\u5B57\u7B26\u7684\u60C5\u51B5\u4E0B\uFF0C\u60A8\u4E0D\u80FD\u4F7F\u7528\u5B57\u7B26 \"\u3002\u4F7F\u7528 \\\\\\\\\"
 FileStep2.refreshPreview=\u66f4\u65b0\u9884\u89c8
 FileStep2.removeEmptyRow=\u7565\u8fc7\u7a7a\u884c
 FileStep2.rowSeparator=\u884c\u5206\u9694\u7b26
@@ -277,8 +275,7 @@ FileStep2Form.output=\u6807\u51c6\u8f93\u51fa
 FileStep2Form.preview=\u9884
 FileStep3.fileNotExist={0} \u6587\u4EF6\u4E0D\u5B58\u5728\u3002
 FileStep3.filepathAlert=\u6587\u4ef6\u8def\u5f84\u987b\u88ab\u6307\u5b9a
-FileStep3.groupMetadata=\u67B6\u6784
-FileStep3.guess=\u731C\u6D4B\n
+FileStep3.guess=\u731C\u6D4B
 FileStep3.guessConfirmation=\u786e\u5b9a\u4fee\u6539\uff1f
 FileStep3.guessConfirmationMessage=Schema \u8BBE\u7F6E\u5DF2\u66F4\u6539\u5E76\u4E14\u4E0E\u5F53\u524D\u7684 schema \u9884\u89C8\u4E0D\u540C\u3002\u66F4\u65B0 schema \u5C06\u6539\u5199\u5F53\u524D\u6240\u6709\u6570\u636E\u3002\u5982\u679C\u9009\u62E9\u5426\uFF0C\u5219\u4E0D\u4F1A\u6539\u5199\u5F53\u524D\u6570\u636E\u3002\u4ECD\u7136\u7EE7\u7EED\uFF1F
 FileStep3.guessFailure=\u8ba1\u7b97\u5931\u8d25
@@ -408,9 +405,9 @@ ContextExportType_NullCannotBeMapped=Null\u503C\u4E0D\u80FD\u6620\u5C04\u5230\u4
 ContextExportDialog_ContextsExport=\u73AF\u5883\u5BFC\u51FA
 ContextExportDialog_ContextsExportDesc=\u5B9A\u4E49\u7684\u4E0A\u4E0B\u6587\u7684\u65B9\u5F0F\u5C06\u88AB\u5BFC\u51FA\u5230\u751F\u6210\u7684WSDL\u4E2D\u3002
 ContextExportDialog_ExportMode=\u5BFC\u51FA\u6A21\u5F0F
-ContextExportDialog_FileAttachmentNotSupported=\\u662F\u4E00\u4E2A\u5B57\u7B26\u4E32\u5185\u5BB9. \u4E0D\u652F\u6301\u6587\u4EF6\u9644\u4EF6\u6A21\u5F0F.
+ContextExportDialog_FileAttachmentNotSupported=\\\u662F\u4E00\u4E2A\u5B57\u7B26\u4E32\u5185\u5BB9. \u4E0D\u652F\u6301\u6587\u4EF6\u9644\u4EF6\u6A21\u5F0F.
 ContextExportDialog_Name=\u4f5c\u4e1a\u540d
-ContextExportDialog_StringAttachmentNotSupported=\\u662F\u4E00\u4E2A\u6587\u4EF6\u5185\u5BB9\u3002.\u4E0D\u652F\u6301\u5B57\u7B26\u4E32\u9644\u4EF6\u6A21\u5F0F.
+ContextExportDialog_StringAttachmentNotSupported=\\\u662F\u4E00\u4E2A\u6587\u4EF6\u5185\u5BB9\u3002.\u4E0D\u652F\u6301\u5B57\u7B26\u4E32\u9644\u4EF6\u6A21\u5F0F.
 ContextExportDialog_XsdType=XSD\u7C7B\u578B
 LibraryField.descriptionColumn=\u5FC5\u8981\u7684
 LibraryField.moduleColumn=\u6a21\u5757
@@ -633,7 +630,7 @@ UpdateDocumentationAction.updateDocActionTipText.updateDoc=\u66f4\u65b0\u6587\u6
 VersionAuthorSection.authorLabel=\u4F5C\u8005
 VersionAuthorSection.lockerLabel=\u66F4\u8863\u5BA4
 VersionAuthorSection.versionLabel=\u7248\u672C
-VersionManagementDialog.ConfirmMessage=\u5C06\u5168\u90E8\u9009\u62E9\u9879\u66F4\u65B0\u81F3\u7248\u672C{0}\uFF1F\r\n
+VersionManagementDialog.ConfirmMessage=\u5C06\u5168\u90E8\u9009\u62E9\u9879\u66F4\u65B0\u81F3\u7248\u672C{0}\uFF1F
 VersionManagementDialog.ConfirmTitle=\u786E\u5B9A
 VersionManagementDialog.DeletedTip=\u5220\u9664
 VersionManagementDialog.EachVersion=\u66F4\u65B0\u6240\u6709\u9879\u76EE\u7684\u7248\u672C
@@ -838,7 +835,6 @@ DatabaseForm.otherDBRegex=[0-9] *
 DatabaseForm.password=\u4EE3\u7406\u5BC6\u7801
 DatabaseForm.port=\u4EE3\u7406\u7AEF\u53E3
 DatabaseForm.portError=\u65e0\u6548\u7aef\u53e3\u53f7
-DatabaseForm.schema=\u67B6\u6784
 DatabaseForm.selectRule=\u9009\u62E9\u6620\u5C04\u89C4\u5219
 DatabaseForm.server=\u670d\u52a1\u5668
 DatabaseForm.service_name=SID \u987b\u88ab\u6307\u5b9a
@@ -875,9 +871,9 @@ DatabaseTableForm.no_such_table=\u8BF7\u952E\u5165\u6570\u636E\u5E93\u4E2D\u5B58
 DatabaseTableForm.refresh.text=\u70B9\u51FB\u6309\u94AE\u83B7\u53D6\u6240\u6709schemas
 DatabaseTableForm.retreiveButtonConfirmation=\u786e\u5b9a\u4fee\u6539\uff1f
 DatabaseTableForm.retreiveButtonConfirmationMessage=Schema \u8bbe\u7f6e\u5df2\u88ab\u6539\u53d8\u4e14\u4e0e\u5f53\u524d\u7684\u9884\u89c8\u4e0d\u540c\u3002\u66f4\u65b0 Schema \u5c06\u8986\u76d6\u5f53\u524d\u6240\u6709\u6570\u636e\uff0c\u8fd8\u8981\u7ee7\u7eed\u5417\uff1f
-DatabaseTableForm.retreiveButtonIsAccessible="\u68C0\u7D22Schema"\u6309\u94AE\u73B0\u5728\u53EF\u4EE5\u4F7F\u7528.
+DatabaseTableForm.retreiveButtonIsAccessible=\"\u68C0\u7D22Schema\"\u6309\u94AE\u73B0\u5728\u53EF\u4EE5\u4F7F\u7528.
 DatabaseTableForm.guessSchema=\u8BA1\u7B97schema
-DatabaseTableForm.type=\u7C7B\u578B\: {0}
+DatabaseTableForm.type=\u7C7B\u578B\\: {0}
 DatabaseTableForm.type_another_name=\u8BF7\u8F93\u5165\u4E00\u4E2A\u6570\u636E\u5E93\u4E2D\u5B58\u5728\u7684\u8868\u540D\u3002
 DatabaseTableForm.typeTable=\u7C7B\u578B: TABLE
 DatabaseTableWizard.description=\u8FC7\u6EE4\u8868
@@ -915,7 +911,7 @@ ExcelFileWizard.windowTitleUpdate=\u7F16\u8F91\u5DF2\u5B58\u5728\u7684Excel\u658
 FileStep3Form.nameInvalid=\u540D\u79F0\u65E0\u6548
 FileTableWizardPage.descriptionCreate=\u5728\u5b58\u50a8\u5e93\u5185\u52a0\u5165\u65b0\u7684\u56fe\u89e3
 FileTableWizardPage.descriptionUpdate=\u66f4\u65b0\u5b58\u50a8\u5e93\u5185\u5df2\u5b58\u5728\u7684\u56fe\u89e3
-FileTableWizardPage.titleCreate=\u65b0\u56fe\u89e3"{0}"
+FileTableWizardPage.titleCreate=\u65b0\u56fe\u89e3\"{0}\"
 FileTableWizardPage.titleUpdate=\u66f4\u65b0\u56fe\u89e3 \u201c{0}\u201d
 FileWizard.windowTitleCreate=\u65b0\u5b9a\u4f4d\u5f00\u578b\u6587\u4ef6
 FileWizard.windowTitleUpdate=\u7f16\u8f91\u5b58\u5728\u7684\u5b9a\u4f4d\u578b\u6587\u4ef6
@@ -1016,13 +1012,11 @@ SalesforceStep2Form.output=\u6807\u51c6\u8f93\u51fa
 SalesforceStep2Form.preview=\u9884
 SalesforceStep2Form.queryCondition=\u6D4F\u89C8\u6570\u636E\u5217\u5E76\u8BBE\u5B9A\u67E5\u8BE2\u6761\u4EF6
 SalesforceStep2Form.saleforceDetail=Salesforce \u6A21\u5757\u5B57\u6BB5\u8BE6\u7EC6\u4FE1\u606F
-SchemaWizard.windowTitle=\u67B6\u6784
 ShadowProcessHelper.logError.previewIsNull01=\\n\u7528\u4E8E\u63D0\u53D6\u6587\u4EF6\u4E2D\u6570\u636E\u6216\u5143\u6570\u636E\u7684 ShadowProcess \u4E0D\u8FD0\u884C\u3002
 ShadowProcessHelper.logError.previewIsNull02=\\nConfigurationElementsFor(\"org.talend.repository.filepreview_provider\").length == 0 ??
 ShowAddedContextdialog.Messages=\u662F\u5426\u5E94\u5F53\u5C06\u4EE5\u4E0B\u4E0A\u4E0B\u6587\u53C2\u6570\u6DFB\u52A0\u5230\u4F5C\u4E1A\u4E2D\uFF1F
 ShowAddedContextdialog.Title=\u5DF2\u6DFB\u52A0\u7684\u4E0A\u4E0B\u6587
 ShowAddedContextdialog.Variables=\u53D8\u91CF
-TableWizard.windowTitle=\u67B6\u6784
 TableWizardPage.descriptionCreate=\u5411\u50a8\u5b58\u5e93\u91cc\u52a0\u5165\u4e00\u4e2a\u56fe\u89e3
 TableWizardPage.descriptionUpdate=\u66f4\u65b0\u76ee\u524d\u5b58\u5728\u7684\u50a8\u5b58\u5e93\u91cc\u7684\u56fe\u89e3
 TableWizardPage.titleCreate=\u65b0\u8fde\u63a5\u91cc\u7684 Schema \u8868
@@ -1043,7 +1037,7 @@ WSDLSchemaStep1Form.UseProxy=\u4F7F\u7528http\u4EE3\u7406
 WSDLSchemaStep1Form.UserName=\u7528\u6237
 WSDLSchemaStep1Form.WSDLGroupParameter=WSDL \u53C2\u6570
 WSDLSchemaStep1Form.WSDLName=WSDL
-WSDLSchemaStep1Form.WSDLURL=http\://www.atomic-x.com/xmlservices/imageextractorws.asmx?wsdl
+WSDLSchemaStep1Form.WSDLURL=http\\://www.atomic-x.com/xmlservices/imageextractorws.asmx?wsdl
 WSDLSchemaStep1Form.output=\u6807\u51c6\u8f93\u51fa
 WSDLSchemaStep1Form.preview=\u9884
 WSDLSchemaStep1Form.TimeOutTitle=\u8D85\u65F6\uFF08\u79D2\uFF09
@@ -1053,7 +1047,7 @@ WSDLSchemaWizard.UpdateWSDLSchema=\u66F4\u65B0WSDL\u6587\u6863\u7ED3\u6784
 XmlFileStep1.filepathXml=XML
 XmlFileStep1.groupFileViewer=\u56fe\u89e3\u89c6\u56fe
 XmlFileStep1Form.limitation=\u9650\u5236
-XmlFileStep1Form.notFound="{0}"\u4E0D\u5B58\u5728\u6216\u8005xml\u683C\u5F0F\u4E0D\u6B63\u786E
+XmlFileStep1Form.notFound=\"{0}\"\u4E0D\u5B58\u5728\u6216\u8005xml\u683C\u5F0F\u4E0D\u6B63\u786E
 XmlFileWizard.windowTitleCreate=\u65B0\u5EFAxml\u6587\u4EF6
 XmlFileWizard.windowTitleUpdate=\u7f16\u8f91\u5df2\u5b58\u5728\u7684XML\u6587\u4ef6
 XmlFileWizard.newColumnsDectect.title=\u68C0\u6D4B\u65B0\u5217
@@ -1067,7 +1061,7 @@ MetadataTalendTypeEditor.editMappingDialog.title=\u7F16\u8F91Mapping\u6587\u4EF6
 MetadataTalendTypeEditor.error.message=\u9519\u8BEF\u4FE1\u606F
 MetadataTalendTypeEditor.fileIsImported=\u6587\u4EF6\u5DF2\u5B58\u5728\u3002
 MetadataTalendTypeEditor.fileIsInvalid=\u5BFC\u5165\u6587\u4EF6\u4E0D\u5408\u6CD5\u3002
-MetadataTalendTypeEditor.fileNameStartRule=\u6587\u4EF6\u540D\u5FC5\u987B\u4EE5'mapping_'\u5F00\u5934\u3002
+MetadataTalendTypeEditor.fileNameStartRule=\u6587\u4EF6\u540D\u5FC5\u987B\u4EE5\'mapping_\'\u5F00\u5934\u3002
 MetadataEmfTableEditor.ColumnNameIsNullError=\u9519\u8BEF\uFF1A\u5217\u540D\u4E3A null
 RepositoryToComponentProperty.xmlFileSelection=\u9009\u62E9\u8981\u9A8C\u8BC1\u7684 XML \u6587\u4EF6
 OpenXSDFileDialog.cancel=\u53D6\u6D88
@@ -1084,11 +1078,11 @@ ConfirmReloadConnectionDialog.reload=\u91CD\u65B0\u52A0\u8F7D
 ConfirmReloadConnectionDialog.unreload=\u4E0D\u52A0\u8F7D
 FileStep3.guessConfirmationMessageWithDQ=Schema \u53D1\u751F\u66F4\u6539\uFF0C\u53EF\u80FD\u5F71\u54CD DQ \u76F8\u5173\u5206\u6790\u3002\u662F\u5426\u8981\u7EE7\u7EED\uFF1F
 DatabaseForm.portAlert=\u5FC5\u987B\u6307\u5B9A\u6570\u636E\u5E93\u7AEF\u53E3
-DatabaseForm.serverAlert=\u5FC5\u987B\u6307\u5B9A DB Server 
+DatabaseForm.serverAlert=\u5FC5\u987B\u6307\u5B9A DB Server
 DatabaseForm.dbFileAlert=\u5FC5\u987B\u6307\u5B9A\u6570\u636E\u5E93\u6587\u4EF6
 DatabaseForm.dataSourceAlert=\u5FC5\u987B\u6307\u5B9A\u6570\u636E\u5E93\u6570\u636E\u6E90
 DatabaseForm.dbRootAlert=\u5FC5\u987B\u6307\u5B9A\u6570\u636E\u5E93\u7BA1\u7406\u5458
-DatabaseForm.sidAlert=\u5FC5\u987B\u6307\u5B9A DB Sid 
+DatabaseForm.sidAlert=\u5FC5\u987B\u6307\u5B9A DB Sid
 DatabaseForm.schemaAlert=\u5FC5\u987B\u6307\u5B9A DB Schema
 XmlFileStep2Form.Xpath_loop_expression=Xpath\u5FAA\u73AF\u8868\u8FBE\u5F0F
 XmlFileStep2Form.Fields_to_extract=\u8981\u63D0\u53D6\u7684\u5B57\u6BB5
@@ -1153,7 +1147,7 @@ DatabaseForm.hiveEmbedded.username=\u7528\u6237\u540D
 DatabaseForm.hiveEmbedded.password=\u5BC6\u7801
 DatabaseForm.hiveEmbedded.useKeyTab=\u4F7F\u7528keytab\u8FDB\u884C\u8EAB\u4EFD\u9A8C\u8BC1
 DatabaseForm.hiveEmbedded.principal=\u4E3B\u4F53
-DatabaseForm.hiveEmbedded.keytab=\t\n\n\u5BC6\u94A5\u8868
+DatabaseForm.hiveEmbedded.keytab=\u5BC6\u94A5\u8868
 SalesforceStep1Form.AuthParam=\u9A8C\u8BC1
 SalesforceStep1Form.authBtn=\u767B\u5F55\u7C7B\u578B
 SalesforceStep1Form.Version=\u9500\u552E\u4EBA\u5458\u7248\u672C
@@ -1244,3 +1238,6 @@ DatabaseForm.encryption.useSSLEncryption.disableCBCProtection=\u7981\u7528 CBC \
 SecurityProjectSettingPage.hidePass=\u9690\u85CF\u5BC6\u7801
 DatabaseForm.DataBase=DataBase
 DatabaseForm.hiveThriftMetastore.port=Hive \u5143\u5B58\u50A8\u7AEF\u53E3
+DatabaseForm.hive.metastore=Hive \u5143\u5B58\u50A8
+DatabaseForm.hive.metastore.enableHa=\u542F\u7528\u9AD8\u53EF\u7528\u6027
+DatabaseForm.hive.metastore.uris=Hive \u5143\u5B58\u50A8 URI
