--- a/i18n/plugins/org.talend.common.ui.runtime.nl/src/main/java/org/talend/commons/ui/runtime/i18n/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.common.ui.runtime.nl/src/main/java/org/talend/commons/ui/runtime/i18n/messages_zh_CN.properties
@@ -114,7 +114,7 @@ TableViewerCreator.Table.BeNull=\u8868\u4E3A\u7A7A
 TableViewerCreator.TableColumn.AssertMsg=ID\u5C5E\u6027\u4E3A\u2019{0}\u2018\u7684TableEditorColumn\u7684TableColumn\u6CA1\u6709\u6B63\u786E\u7684Table\u3002
 TreeToTablesLinker.Type.Unsupported=\u4e0d\u652f\u6301\u5f53\u524d\u7684\u63a7\u4ef6
 commons.error=\u9519\u8BEF
-exception.errorOccured=\u51FA\u73B0\u4E00\u4E2A\u9519\u8BEF({0})\u3002\n\u67E5\u770B\u65E5\u5FD7\u83B7\u53D6\u66F4\u591A\u4FE1\u606F\u3002
+exception.errorOccured=\u51FA\u73B0\u4E00\u4E2A\u9519\u8BEF({0})\u3002\\n\u67E5\u770B\u65E5\u5FD7\u83B7\u53D6\u66F4\u591A\u4FE1\u606F\u3002
 ModelSelectionDialog.Message=\u8BF7\u9009\u62E9\u4E00\u4E2A\u9009\u9879\u6216\u53D6\u6D88\u3002
 ModelSelectionDialog.Option=\u9009\u9879
 ModelSelectionDialog.BuiltIn=\u66F4\u6539\u4E3A\u5185\u7F6E\u5C5E\u6027\u3002
@@ -122,7 +122,7 @@ ModelSelectionDialog.ViewSchema=\u67E5\u770B schema (\u53EA\u8BFB)\u3002
 ModelSelectionDialog.newViewSchema=\u67E5\u770B schema
 ModelSelectionDialog.ViewQuery=\u67E5\u770B\u67E5\u8BE2 (\u53EA\u8BFB)\u3002
 ModelSelectionDialog.Update=\u66F4\u65B0\u5B58\u50A8\u5E93\u8FDE\u63A5\u3002
-FileStep2.previewFailure=\u9884\u89C8\u9519\u8BEF\u3002\u5FC5\u987B\u4FEE\u6539\u8BBE\u7F6E\u3002\n\uFF08\u9519\u8BEF\u7684\u5B57\u7B26\u7F16\u7801\uFF09
+FileStep2.previewFailure=\u9884\u89C8\u9519\u8BEF\u3002\u5FC5\u987B\u4FEE\u6539\u8BBE\u7F6E\u3002\\n\uFF08\u9519\u8BEF\u7684\u5B57\u7B26\u7F16\u7801\uFF09
 GlobalServiceRegister.ServiceNotRegistered=\u670D\u52A1{0}\u6CA1\u6709\u88AB\u6CE8\u518C
 MessageBoxExceptionHandler.showMessageForSchemaImportXml.unParseXML.title=xml \u65E0\u6CD5\u89E3\u6790\u3002
 MessageBoxExceptionHandler.showMessageForSchemaImportXml.unParseXML.msg=xml \u65E0\u6CD5\u4EE5\u8FD9\u79CD\u683C\u5F0F\u89E3\u6790\u3002
