--- a/i18n/plugins/org.talend.commons.runtime.nl/src/org/talend/commons/i18n/internal/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.commons.runtime.nl/src/org/talend/commons/i18n/internal/messages_zh_CN.properties
@@ -26,20 +26,20 @@ StringUtils.IllegalArgument2=\\\\uxxxx \u7F16\u7801\u683C\u5F0F\u9519\u8BEF\u300
 StringUtils.IllegalArgument3=\\\\0xxx \u7F16\u7801\u683C\u5F0F\u9519\u8BEF\u3002
 VersionUtils.Version.Error2=\u7578\u5F62\u5B57\u7B26\u4E32{0}(\u51FA\u73B0M{1}m)
 FilesUtils.operationCanceled=\u590D\u5236\u6587\u4EF6\u6216\u6587\u4EF6\u5939\u65F6\u64CD\u4F5C\u5DF2\u53D6\u6D88\u3002
-resources.file.notCreated=\u6587\u4EF6"{0}"\u4E0D\u80FD\u88AB\u521B\u5EFA({1})
-resources.file.notDeleted=\u6587\u4EF6"{0}"\u4E0D\u80FD\u88AB\u5220\u9664
-resources.file.notGet=\u8981\u6C42\u7684\u6587\u4EF6"{0}"\u6CA1\u6709\u5728\u6587\u4EF6\u5939"{1}"\u4E2D
-resources.fileContent.notGet=\u6587\u4EF6"{0}"\u7684\u5185\u5BB9\u65E0\u6CD5\u8BFB\u53D6\u3002
-resources.folder.notCreated=\u6587\u4EF6\u5939"{0}"\u4E0D\u80FD\u88AB\u521B\u5EFA
-resources.folder.notDeleted=\u6587\u4EF6\u5939"{0}"\u4E0D\u80FD\u88AB\u5220\u9664
-resources.folder.notEmptied=\u6587\u4EF6\u5939"{0}"\u4E0D\u80FD\u4E3A\u7A7A
-resources.folder.notGet=\u8981\u6C42\u7684\u6587\u4EF6\u5939"{0}"\u6CA1\u6709\u5728\u5DE5\u7A0B"{1}"\u4E2D
+resources.file.notCreated=\u6587\u4EF6\"{0}\"\u4E0D\u80FD\u88AB\u521B\u5EFA({1})
+resources.file.notDeleted=\u6587\u4EF6\"{0}\"\u4E0D\u80FD\u88AB\u5220\u9664
+resources.file.notGet=\u8981\u6C42\u7684\u6587\u4EF6\"{0}\"\u6CA1\u6709\u5728\u6587\u4EF6\u5939\"{1}\"\u4E2D
+resources.fileContent.notGet=\u6587\u4EF6\"{0}\"\u7684\u5185\u5BB9\u65E0\u6CD5\u8BFB\u53D6\u3002
+resources.folder.notCreated=\u6587\u4EF6\u5939\"{0}\"\u4E0D\u80FD\u88AB\u521B\u5EFA
+resources.folder.notDeleted=\u6587\u4EF6\u5939\"{0}\"\u4E0D\u80FD\u88AB\u5220\u9664
+resources.folder.notEmptied=\u6587\u4EF6\u5939\"{0}\"\u4E0D\u80FD\u4E3A\u7A7A
+resources.folder.notGet=\u8981\u6C42\u7684\u6587\u4EF6\u5939\"{0}\"\u6CA1\u6709\u5728\u5DE5\u7A0B\"{1}\"\u4E2D
 resources.members.notGet=\u5BB9\u5668\u7684\u6210\u5458\u4E0D\u80FD\u88AB\u8BFB\u53D6\u3002
-resources.project.notGet=\u8981\u6C42\u7684\u5DE5\u7A0B"{0}"\u4E0D\u5B58\u5728
-resources.resource.notMoved=\u8D44\u6E90"{0}"\u4E0D\u80FD\u79FB\u52A8\u5230"{1}"
+resources.project.notGet=\u8981\u6C42\u7684\u5DE5\u7A0B\"{0}\"\u4E0D\u5B58\u5728
+resources.resource.notMoved=\u8D44\u6E90\"{0}\"\u4E0D\u80FD\u79FB\u52A8\u5230\"{1}\"
 utils.data.container=Id{0}\u5DF2\u7ECF\u88AB\u4F7F\u7528\u5728\u5BB9\u5668\u4E2D
 utils.workbench.extensions.badNumberOfExtension=\u65E0\u6548\u7684\u6269\u5C55\u6570\u5B57\u88AB\u53D1\u73B0\u5728{0}\u4E2D\uFF0C\u5F53\u67E5\u627E{3}\u51FA\u73B0\u5728{1}\u548C{2}\u4E4B\u95F4
-utils.workbench.extensions.noExtension=\u6269\u5C55\u70B9ID\u4E3A"{0}"\u7684Plug-in\u4E0D\u5B58\u5728
+utils.workbench.extensions.noExtension=\u6269\u5C55\u70B9ID\u4E3A\"{0}\"\u7684Plug-in\u4E0D\u5B58\u5728
 XmlNodeRetriever.countResult=\u8BA1\u7B97\u7ED3\u679C\uFF1A
 XmlNodeRetriever.field2Node=\u9886\u57DF2\u8282\u70B9=
 XmlNodeRetriever.filed1Node=\u9886\u57DF1\u8282\u70B9=
@@ -55,3 +55,4 @@ SoftwareSystemManager.NULL_INSTANCE_SOFTWARE_SYS=\u7A7A\u8F6F\u4EF6\u7CFB\u7EDF\
 AS400ResultSet.unknowCloumn=\u65E0\u6548\u7684\u53C2\u6570\uFF1A\u5217\u540D\u672A\u77E5
 AS400ResultSet.parameterIndex=\u65E0\u6548\u7684\u53C2\u6570\uFF1A\u53C2\u6570\u7D22\u5F15
 AS400ResultSet.outofRange=\\ \u8D85\u51FA\u8303\u56F4\u3002
+ITaCoKitService.exception.multipleInstance=\u53D1\u73B0\u591A\u4E2A\u5B9E\u4F8B\uFF1A{0}
