--- a/i18n/plugins/org.talend.commons.ui.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.commons.ui.nl/src/main/java/messages_zh_CN.properties
@@ -27,14 +27,14 @@ AccessorUtils.isReq=\u9700\u8981\u4E00\u4E2ABean(<B>)
 EventUtil.UnknowType=\u672A\u77E5\u7684\u65F6\u95F4\u7C7B\u578B\uFF1A
 ProposalUtils.CellProposal.Error=CellEditor\u7C7B\u578B\u63D0\u793A\u4E0D\u88AB\u652F\u6301\uFF1A
 RemovePushButton.RemoveButton.Tip=\u5220\u9664\u6240\u9009\u9879
-FileStep2.previewFailure=\u9884\u89c8\u9519\u8bef\u3002\u987b\u6539\u53d8\u4e00\u4e9b\u8bbe\u7f6e\u3002 \n\u6ce8\u610f\uff1a\u9884\u89c8\u9519\u8bef\u53ef\u80fd\u662f\u56e0\u4e3a\u9519\u8bef\u7684\u7f16\u7801\u8bbe\u7f6e\u9020\u6210\u7684\u3002
+FileStep2.previewFailure=\u9884\u89c8\u9519\u8bef\u3002\u987b\u6539\u53d8\u4e00\u4e9b\u8bbe\u7f6e\u3002 \\n\u6ce8\u610f\uff1a\u9884\u89c8\u9519\u8bef\u53ef\u80fd\u662f\u56e0\u4e3a\u9519\u8bef\u7684\u7f16\u7801\u8bbe\u7f6e\u9020\u6210\u7684\u3002
 PastePushButton.PasteButton.Label=\u7C98\u8D34
 ModelSelectionDialog.ViewSchema=\u67E5\u770B schema (\u53EA\u8BFB)\u3002
 LabelledFileField.BrowseButton.Text=\u6D4F\u89C8...
 ModelSelectionDialog.ViewQuery=\u67E5\u770B\u67E5\u8BE2 (\u53EA\u8BFB)\u3002
 MoveUpPushButton.MoveUpButton.Tip=\u5411\u4E0A\u79FB\u52A8\u9009\u4E2D\u9879
 AccessorUtils.Assert1=\u8FD9\u4E2A\u5217(\u6807\u9898\u4E3A\u2018{0}\u2019\uFF0CID\u4E3A\u2018{1}\u2019)\u7684\u2018BeanPropertyAccessors\u2019\u6CA1\u6709\u6B63\u786E\u914D\u7F6E,\u6216\u8005\u503C\u8BBE\u7F6E\u4E3A\u4E0D\u6B63\u786E\u7684\u7C7B\u578B\u3002
-exception.errorOccured=\u4E00\u4E2A\u9519\u8BEF\u53D1\u751F({0}).\n \u8BE6\u7EC6\u63CF\u8FF0\u67E5\u770B\u65E5\u5FD7\u3002
+exception.errorOccured=\u4E00\u4E2A\u9519\u8BEF\u53D1\u751F({0}).\\n \u8BE6\u7EC6\u63CF\u8FF0\u67E5\u770B\u65E5\u5FD7\u3002
 ColorStyledText.CopyItem.Text=\u590D\u5236
 AccessorUtils.Assert0=\u8FD9\u4E2A\u5217(\u6807\u9898\u4E3A\u2018{0}\u2019\uFF0CID\u4E3A\u2018{1}\u2019)\u7684\u2018BeanPropertyAccessors\u2019\u6CA1\u6709\u6B63\u786E\u914D\u7F6E\u3002\u2018{2}\u2019\u9700\u8981\u4E00\u4E2ABean<B>
 ExtendedTableMoveCommand.MoveLabel=\u5411\u4E0A\u6216\u5411\u4E0B\u79FB\u52A8\u4E00\u4E2A\u6216\u591A\u4E2A\u8868
@@ -53,7 +53,7 @@ ModifyBeanValueCommand.ModifyCell.Label=\u4FEE\u6539\u5355\u5143\u683C\u503C
 ColorStyledText.SelectAllItem.Text=\u5168\u9009
 DialogErrorForCellEditorListener.Error.MsgDialogTitle=\u9519\u8BEF
 ExportPushButton.ExportButton.Tip=\u5BFC\u51FA\u6240\u6709\u884C\u5230XML\u6587\u4EF6
-TableViewerCreator.CellModifier.ExError=\u5F53\u524DCellModifier\u4E0D\u652F\u6301\u6B64\u64CD\u4F5C\u3002\n \u4F7F\u7528\u2019{0}\u2018\u7C7B\u6216\u7EE7\u627F\u8FD9\u4E2A\u7C7B\u7684\u5B50\u7C7B
+TableViewerCreator.CellModifier.ExError=\u5F53\u524DCellModifier\u4E0D\u652F\u6301\u6B64\u64CD\u4F5C\u3002\\n \u4F7F\u7528\u2019{0}\u2018\u7C7B\u6216\u7EE7\u627F\u8FD9\u4E2A\u7C7B\u7684\u5B50\u7C7B
 Curve2D.MinNum.Be0=\u6BB5\u7684\u6700\u5C0F\u503C\u5FC5\u987B\u4E3A\u6B63\u6570\u62160\u3002
 ModeReader.IgnoreElement=\u5FFD\u7565\u672A\u77E5\u5143\u7D20
 Curve2D.MaxNum.Be0=\u6BB5\u7684\u6700\u5927\u503C\u5FC5\u987B\u4E3A\u6B63\u6570\u62160\u3002
