--- a/i18n/plugins/org.talend.core.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.core.nl/src/main/java/messages_zh_CN.properties
@@ -18,9 +18,9 @@ ERepositoryObjectType.FolderNotFound=\u7C7B\u578B{0}\u7684\u76EE\u5F55\u672A\u62
 CorePreferencePage.componentDefaultFileDirectory=\u7EC4\u4EF6\u7F3A\u7701\u6587\u4EF6\u76EE\u5F55
 SelectRepositoryContextDialog.ExistenceMessage=\u4F5C\u4E1A\u4E2D\u5DF2\u7ECF\u5B58\u5728\u53D8\u91CF \"{0}\" (\u4E0A\u4E0B\u6587:\"{1}\")\u3002
 CorePreferencePage.runInMultiThread=\u591A\u7EBF\u7A0B\u8FD0\u884C(\u521b\u5efa\u65b0\u4f5c\u4e1a\u9ed8\u8ba4\u91c7\u7528)
-MappingFileLoader.UndeclaredDbType="{0}"\u6CA1\u6709\u88AB\u7533\u660E\u7684\u6570\u636E\u5E93\u7C7B\u578B\uFF0C\u5728\u6570\u636E\u5E93ID"{1}"\u5728\u8282\u70B9\uFF1A{2}
+MappingFileLoader.UndeclaredDbType=\"{0}\"\u6CA1\u6709\u88AB\u7533\u660E\u7684\u6570\u636E\u5E93\u7C7B\u578B\uFF0C\u5728\u6570\u636E\u5E93ID\"{1}\"\u5728\u8282\u70B9\uFF1A{2}
 EConnectionType.tableMenu=\u8868\u683C
-MappingFileLoader.UnbindedDbTypes=\u5728\u6570\u636E\u5E93ID"{0}"\u7684Mapping\u6587\u4EF6\uFF0C\u6570\u636E\u5E93\u7C7B\u578B\u6CA1\u6709\u7528"{1}" Talend \u7C7B\u578B\uFF1A"{2}"\u7ED1\u5B9A
+MappingFileLoader.UnbindedDbTypes=\u5728\u6570\u636E\u5E93ID\"{0}\"\u7684Mapping\u6587\u4EF6\uFF0C\u6570\u636E\u5E93\u7C7B\u578B\u6CA1\u6709\u7528\"{1}\" Talend \u7C7B\u578B\uFF1A\"{2}\"\u7ED1\u5B9A
 EConnectionType.onComponentErrorMenu=\u7EC4\u4EF6\u8FD0\u884C\u9519\u8BEF
 EConnectionType.onComponentOkMenu=\u7EC4\u4EF6\u8FD0\u884C\u6B63\u786E
 EConnectionType.runAfterMenu=\u8FD0\u884C\u540E
@@ -45,8 +45,7 @@ SelectRepositoryContextDialog.ExpandAll=\u5C55\u5F00
 EUpdateItemType.Components=\u7EC4\u4EF6
 EConnectionType.mergeMenu=\u5408\u5E76
 RepositoryUpdateManager.RenameContextTitle=\u91CD\u547D\u540D\u95EE\u9898
-EUpdateItemType.Schema=\u67B6\u6784
-ContextValueErrorChecker.ErrorTitile=\u4E0A\u4E0B\u6587\u503C\u9519\u8BEF: 
+ContextValueErrorChecker.ErrorTitile=\u4E0A\u4E0B\u6587\u503C\u9519\u8BEF:
 EMetadataEncoding.UTF8=Unicode 2.0 UTF-8
 EMetadataEncoding.UTF7=Unicode 2.0 UTF-7
 RepositoryUpdateManager.RenameContextMessages=\u662F\u5426\u786E\u5B9A\u8981\u628A\u91CD\u547D\u540D\u53D8\u91CF\u4F20\u64AD\u5230\u6240\u6709\u4F5C\u4E1A\uFF1F\\n\\n \u5982\u679C\u662F\uFF0C\u53EF\u80FD\u9700\u8981\u5F88\u957F\u65F6\u95F4\u8FDB\u884C\u66F4\u65B0\u3002\\n\\n \u5982\u679C\u4E0D\u662F\uFF0C\u65E7\u7684\u53D8\u91CF\u5C06\u6539\u4E3A\u5185\u7F6E\u4E8E\u4F5C\u4E1A\u4E2D\u3002
@@ -59,7 +58,7 @@ EMetadataEncoding.GB18030=\u4E2D\u6587\u56FD\u6807
 ContextProcessSection.errorTitle=\u9519\u8BEF
 EConnectionType.parallelize=\u5E76\u884C
 VersionSection.CreationDate=\u521B\u5EFA\u65E5\u671F
-MappingFileLoader.UnbindedTalendTypes=\u5728\u6570\u636E\u5E93ID"{0}"\u7684Mapping\u6587\u4EF6\uFF0CTalend\u7C7B\u578B\u6CA1\u6709\u7528"{1}"\u6570\u636E\u5E93\u7C7B\u578B:{2}\u7ED1\u5B9A
+MappingFileLoader.UnbindedTalendTypes=\u5728\u6570\u636E\u5E93ID\"{0}\"\u7684Mapping\u6587\u4EF6\uFF0CTalend\u7C7B\u578B\u6CA1\u6709\u7528\"{1}\"\u6570\u636E\u5E93\u7C7B\u578B:{2}\u7ED1\u5B9A
 ContextProcessSection.7=\u4E3A\u65B0\u7684\u4E0A\u4E0B\u6587\u6307\u5B9A\u540D\u5B57
 ContextProcessSection.6=\u65B0\u7684\u4E0A\u4E0B\u6587
 EConnectionType.mainMenu=\u4E3B\u7EBF
@@ -105,7 +104,7 @@ EUpdateItemType.SAPFunction=SAP \u51FD\u6570
 EMetadataEncoding.Big5=\u7E41\u4F53\u4E2D\u6587
 ContextProcessSection.RemoveInformation={0}\u4E3A\u9ED8\u8BA4\u7684\u4E0A\u4E0B\u6587,\u4E0D\u80FD\u5220\u9664
 RepositoryUpdateManager.Messages=\u60A8\u60F3\u5C06\u8FD9\u4E9B\u4FEE\u6539\u4F20\u9012\u5230\u6240\u6709\u4F5C\u4E1A\u4E2D\u5417\uFF1F\u53EF\u80FD\u9700\u8981\u8F83\u957F\u65F6\u95F4\u3002
-MappingFileLoader.InvalidTalendType="{0}"\u662F\u4E00\u4E2A\u975E\u6CD5\u7684Talend\u7C7B\u578B\u5BF9\u6570\u636E\u5E93ID"{2}"\uFF0C\u5728\u8282\u70B9\uFF1A{3}
+MappingFileLoader.InvalidTalendType=\"{0}\"\u662F\u4E00\u4E2A\u975E\u6CD5\u7684Talend\u7C7B\u578B\u5BF9\u6570\u636E\u5E93ID\"{2}\"\uFF0C\u5728\u8282\u70B9\uFF1A{3}
 RepositoryUpdateManager.Check=\u68C0\u67E5\u4E2D...
 ListPreferencePage.RemoveButtonName=\u79FB\u9664
 UpdatesConstants.Joblet=Joblet
@@ -114,10 +113,10 @@ EConnectionType.iteratorMenu=\u8FED\u4EE3
 EMetadataEncoding.Arabic=\u963F\u62C9\u4F2F\u8BED
 EMetadataEncoding.Microsoft_Latin1=\u5FAE\u8F6F(Latin-1)
 SelectRepositoryContextGroupDialog.Title=\u6DFB\u52A0\u4E0A\u4E0B\u6587\u7EC4
-MappingFileLoader.DbmsIdAlreadyExists=\u6570\u636E\u5E93ID"{0}"\u5DF2\u7ECF\u5B58\u5728\uFF01
+MappingFileLoader.DbmsIdAlreadyExists=\u6570\u636E\u5E93ID\"{0}\"\u5DF2\u7ECF\u5B58\u5728\uFF01
 EConnectionType.runIfMenu=\u6B63\u5E38\u65F6\u8FD0\u884C
 VersionSection.ModificationDate=\u4FEE\u6539\u65E5\u671F
-MappingFileLoader.DbTypeAlreadyExists=\u5728\u6570\u636E\u5E93ID{0}\u4E2D\uFF0C\u6570\u636E\u7C7B\u578B"{1}" \u51FA\u73B0\u591A\u6B21\u5728\u6587\u4EF6"{2}" \u8282\u70B9:{3}
+MappingFileLoader.DbTypeAlreadyExists=\u5728\u6570\u636E\u5E93ID{0}\u4E2D\uFF0C\u6570\u636E\u7C7B\u578B\"{1}\" \u51FA\u73B0\u591A\u6B21\u5728\u6587\u4EF6\"{2}\" \u8282\u70B9:{3}
 AbstractComponentsProvider.folderNotExist=\u6587\u4EF6\u5939{0}\u4E0D\u5B58\u5728.
 AbstractItemMigrationTask.taskFailed=\u8FC1\u79FB{0}\u9879\u76EE\u5931\u8D25{1}
 ColumnNameChangedExt.columnChanged=\u7ED3\u70B9: {0} \u5217\u6539\u53D8: {1}-> {2}
@@ -299,7 +298,6 @@ HTMLDocGenerator.values=\u503C
 HTMLDocGenerator.version=\u7248\u672C
 ConnectionParameterName.HostLabel=\u4e3b\u673a
 ConnectionParameterName.PortLabel=\u7aef\u53e3
-ConnectionParameterName.SchemaLabel=\u67B6\u6784
 ConnectionParameterName.UserLabel=\u7528\u6237
 ConnectionParameterName.PasswordLabel=\u5bc6\u7801
 ConnectionParameterName.DbPathLabel=\u6570\u636E\u5E93\u7684\u6839\u8DEF\u5F84
