--- a/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_ar.properties
+++ b/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_ar.properties
@@ -69,3 +69,4 @@ OpenXSDFileDialog.confirm=\u062A\u0623\u0643\u064A\u062F
 repository.code=\u0634\u0641\u0631\u0629
 TalendDataCollectorPreviewPreferencePage_Value=\u0642\u064A\u0645\u0629
 ModuleListCellEditor.add=\u0625\u0636\u0627\u0641\u0629
+ModuleListCellEditor.delete=\u062D\u0630\u0641
