--- a/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_ru.properties
+++ b/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_ru.properties
@@ -187,3 +187,4 @@ TalendDataCollectorPreviewPreferencePage_Value=\u0417\u043D\u0430\u0447\u0435\u0
 repository.servicesPort=\u041F\u043E\u0440\u0442
 EMetadataEncoding.Latin9=latin9
 ModuleListCellEditor.add=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
+ModuleListCellEditor.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
