--- a/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_zh_CN.properties
@@ -6,7 +6,7 @@ AdvancedSocketFactory.failedInitial=\u9519\u8BEF:\u65E0\u6CD5\u521D\u59CB\u5316
 ArchiveFileExportOperationFullPath.SpecialFile=spagic.\u5C5E\u6027
 ColumnNameChangedExt.columnChanged=\u7ED3\u70B9: {0} \u5217\u6539\u53D8: {1}-> {2}
 ComponentsFormatPreferencePage.add=\u589E\u52A0
-ComponentsFormatPreferencePage.errorCreateConnectionName=\u547D\u540D"{0}"\u65E0\u6548
+ComponentsFormatPreferencePage.errorCreateConnectionName=\u547D\u540D\"{0}\"\u65E0\u6548
 ComponentsFormatPreferencePage.formatConnection=\u683C\u5F0F\u5316\u9ED8\u8BA4\u8FDE\u63A5
 ComponentsFormatPreferencePage.formatHint=\u683C\u5F0F\u63D0\u793A\u9ED8\u8BA4\u503C\uFF1A
 ComponentsFormatPreferencePage.formatLable=\u683C\u5F0F\u5316\u9ED8\u8BA4\u6807\u7B7E
@@ -19,7 +19,7 @@ ContextComposite.treeValue=\u6811\u683C\u5F0F\u503C
 ContextComposite.variable=\u53D8\u91CF
 ContextParameterProposal.ContextVariable=\\n\\n\u4E0A\u4E0B\u6587\u53D8\u91CF\u3002
 ContextParameterProposal.Description=\u63CF\u8FF0\uFF1A {0}
-ContextValueErrorChecker.ErrorTitile=\u4E0A\u4E0B\u6587\u503C\u9519\u8BEF: 
+ContextValueErrorChecker.ErrorTitile=\u4E0A\u4E0B\u6587\u503C\u9519\u8BEF:
 ContextParameterProposal.NoCommentAvaiable=\u6CA1\u6709\u6CE8\u91CA\u3002
 ContextParameterProposal.Type=\\n\u7C7B\u578B\uFF1A{1}
 ContextParameterProposal.VariableName=\\n\\n\u53D8\u91CF\u540D\u79F0\uFF1A{2}
@@ -191,7 +191,7 @@ MetadataTalendTypeEditor.editMappingDialog.title=\u7F16\u8F91Mapping\u6587\u4EF6
 MetadataTalendTypeEditor.error.message=\u9519\u8BEF\u4FE1\u606F
 MetadataTalendTypeEditor.fileIsImported=\u6587\u4EF6\u5DF2\u5B58\u5728\u3002
 MetadataTalendTypeEditor.fileIsInvalid=\u5BFC\u5165\u6587\u4EF6\u4E0D\u5408\u6CD5\u3002
-MetadataTalendTypeEditor.fileNameStartRule=\u6587\u4EF6\u540D\u5FC5\u987B\u4EE5'mapping_'\u5F00\u5934\u3002
+MetadataTalendTypeEditor.fileNameStartRule=\u6587\u4EF6\u540D\u5FC5\u987B\u4EE5\'mapping_\'\u5F00\u5934\u3002
 MetadataTool.errorMessage=\u65E0\u6CD5\u8F93\u5165\u5F53\u524D\u5B57\u7B26\u3002
 MetadataTool.invalid=\u65E0\u6548\u503C
 MetadataTool.invalidChar=\u65E0\u6548\u5B57\u7B26
@@ -282,7 +282,6 @@ SchemaOperationChoiceDialog.EditSchemaMessage=\u7F16\u8F91 schema\u3002
 SchemaOperationChoiceDialog.Message=\u8BF7\u9009\u62E9\u4E00\u4E2A\u9009\u9879\u6216\u53D6\u6D88\u3002
 SchemaOperationChoiceDialog.Option=\u9009\u9879
 SchemaOperationChoiceDialog.StatusMessage=\u65E0\u6548\u6216\u5DF2\u5B58\u5728\u7684\u56FE\u89E3
-SchemaOperationChoiceDialog.Title=\u67B6\u6784
 SchemaOperationChoiceDialog.ViewSchemaMessage=\u67E5\u770B schema (\u53EA\u8BFB)\u3002
 SchemaXPathQuerysDialog.Mappings=\u6620\u5C04
 SelectRepositoryContextDialog.DeselectAll=\u5168\u90E8\u4E0D\u9009
@@ -384,7 +383,6 @@ repository.tdqelement.businessrule=TDQ \u4E1A\u52A1\u89C4\u5219
 repository.tdqelement.indicator=TDQ \u6307\u6807
 repository.tdqelement.pattern=TDQ \u6A21\u5F0F
 EUpdateItemType.Property=\u5C5E\u6027
-EUpdateItemType.Schema=\u67B6\u6784
 EUpdateItemType.SAPFunction=SAP \u51FD\u6570
 EUpdateItemType.SAPIDoc=SAP IDoc
 EUpdateItemType.Query=\u67E5\u8BE2
@@ -451,7 +449,7 @@ BusinessAppearanceComposite.textAlignment.horizontal.centre=\u4E2D\u592E
 BusinessAppearanceComposite.textAlignment.vertical.top=\u9876\u90E8
 BusinessAppearanceComposite.textAlignment.vertical.bottom=\u5E95\u90E8
 BusinessAppearanceComposite.textAlignment.vertical.centre=\u4E2D\u592E
-ConnectionBean.Local= \u672C\u5730
+ConnectionBean.Local=\u672C\u5730
 ConnectionBean.DefaultConnection=\u9ED8\u8BA4\u8FDE\u63A5
 InegerCellEditorListener.NegativeNumberMessage={0} \u7684\u503C\u4E0D\u80FD\u662F\u8D1F\u6570\u3002
 InegerCellEditorListener.NumeralMessage={0} \u7684\u503C\u5E94\u8BE5\u4E3A\u6570\u5B57\u3002
@@ -528,7 +526,7 @@ ContextChangeDefaultCommand.label=\u66F4\u6539\u9ED8\u8BA4\u73AF\u5883
 ContextRemoveParameterCommand.label=\u79FB\u9664\u53C2\u6570
 ContextRenameParameterCommand.renameParameter=\u53C2\u6570\u91CD\u547D\u540D
 ContextModifyCommand.label=\u4FEE\u6539\u73AF\u5883
-ArchiveFileExportOperationFullPath.cannotCreateDir=\u65E0\u6CD5\u521B\u5EFA\u76EE\u5F55 '{0}'
+ArchiveFileExportOperationFullPath.cannotCreateDir=\u65E0\u6CD5\u521B\u5EFA\u76EE\u5F55 \'{0}\'
 MetadataExportXmlCommand.title=\u8B66\u544A
 MetadataExportXmlCommand.message=\u8B66\u544A\uFF1A\u6B64\u6587\u4EF6\u5DF2\u5B58\u5728\uFF0C\u662F\u5426\u8981\u6539\u5199\uFF1F
 WorkingSetConfigurationDialog_new_label=\u65B0\u5EFA
@@ -567,7 +565,7 @@ WorkspaceMnu.choose.tooltip=\u9009\u62E9\u53E6\u4E00\u4E2A\u5DE5\u4F5C\u533A
 WorkspaceMnu.restart.error.title=\u7F3A\u5C11\u7CFB\u7EDF\u5C5E\u6027
 WorkspaceMnu.restart.error.message=\u7531\u4E8E\u5C1A\u672A\u8BBE\u7F6E{0}\u5C5E\u6027\uFF0C\u65E0\u6CD5\u91CD\u65B0\u542F\u52A8\u8BE5\u5E73\u53F0\u3002
 WorkspaceDlg.title=\u9009\u62E9\u5DE5\u4F5C\u533A
-WorkspaceDlg.Message=Talend Studio\u5B58\u50A8\u6570\u636E\u5230\u4E00\u4E2A\u5DF2\u547D\u540D\u7684\u5DE5\u4F5C\u533A\u76EE\u5F55\n\u8BF7\u9009\u62E9\u5DE5\u4F5C\u533A\u76EE\u5F55
+WorkspaceDlg.Message=Talend Studio\u5B58\u50A8\u6570\u636E\u5230\u4E00\u4E2A\u5DF2\u547D\u540D\u7684\u5DE5\u4F5C\u533A\u76EE\u5F55\\n\u8BF7\u9009\u62E9\u5DE5\u4F5C\u533A\u76EE\u5F55
 WorkspaceDlg.workspace.label=\u5DE5\u4F5C\u533A
 WorkspaceDlg.browse.button=&\u6D4F\u89C8...
 WorkspaceDlg.browse.folder.title=\u9009\u62E9\u5DE5\u4F5C\u533A\u6587\u4EF6\u5939
