--- a/i18n/plugins/org.talend.metadata.managment.nl/src/main/java/metadata/managment/i18n/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.metadata.managment.nl/src/main/java/metadata/managment/i18n/messages_zh_CN.properties
@@ -1,4 +1,4 @@
-AbstractBrandingService_job_license_header_content=// ============================================================================\n//\n// Copyright (c) 2005-2010, Talend Inc.\n//\n// \u672C\u6BB5\u6E90\u4EE3\u7801\u662F\u7531{0}\u81EA\u52A8\u751F\u6210\n// / \u4F5C\u4E1A\u8BBE\u8BA1\u5668 (\u4EE3\u7801\u751F\u6210\u5668\u7248\u672C{1})\n// \u4F60\u53EF\u4EE5\u627E\u5230\u66F4\u591ATalend\u4EA7\u54C1\u4FE1\u606F\u5728www.talend.com.\n// \u60A8\u53EF\u4EE5\u6839\u636EGNU LGPL\u8BB8\u53EF\u7684\u6761\u6B3E\u53D1\u5E03\u6B64\u4EE3\u7801\n// http://www.gnu.org/licenses/lgpl.html).\n//\n// ============================================================================
+AbstractBrandingService_job_license_header_content=// ============================================================================\\n//\\n// Copyright (c) 2005-2010, Talend Inc.\\n//\\n// \u672C\u6BB5\u6E90\u4EE3\u7801\u662F\u7531{0}\u81EA\u52A8\u751F\u6210\\n// / \u4F5C\u4E1A\u8BBE\u8BA1\u5668 (\u4EE3\u7801\u751F\u6210\u5668\u7248\u672C{1})\\n// \u4F60\u53EF\u4EE5\u627E\u5230\u66F4\u591ATalend\u4EA7\u54C1\u4FE1\u606F\u5728www.talend.com.\\n// \u60A8\u53EF\u4EE5\u6839\u636EGNU LGPL\u8BB8\u53EF\u7684\u6761\u6B3E\u53D1\u5E03\u6B64\u4EE3\u7801\\n// http://www.gnu.org/licenses/lgpl.html).\\n//\\n// ============================================================================
 AbstractBrandingService.routines_license_header_content=\u7248\u6743\u6240\u6709 (c) 2005-2010, Talend Inc.\\n//\\n// \u6B64\u6E90\u4EE3\u7801\u5DF2\u7531_{0} \u81EA\u52A8\u751F\u6210\\n// CodeGenerator \u7248\u672C {1}\\n// \u60A8\u53EF\u4EE5\u8BBF\u95EE www.talend.com \u4E86\u89E3\u6709\u5173 Talend \u4EA7\u54C1\u7684\u66F4\u591A\u4FE1\u606F\u3002\\n// \u60A8\u53EF\u4EE5\u6839\u636E GNU LGPL \u8BB8\u53EF\u8BC1\u6761\u6B3E\u5206\u53D1\u6B64\u4EE3\u7801\\n// http://www.gnu.org/licenses/lgpl.html)\u3002
 AbstractComponentsProvider.folderNotExist=\u6587\u4EF6\u5939{0}\u4E0D\u5B58\u5728.
 AbstractItemMigrationTask.taskFailed=\u8FC1\u79FB{0}\u9879\u76EE\u5931\u8D25{1}
@@ -21,7 +21,7 @@ ColorsCodeViewerPreferencePage.keyword2Color=\u5173\u952E\u5B572 \u989C\u8272
 ColorsCodeViewerPreferencePage.keyword3Color=\u5173\u952E\u5B573 \u989C\u8272
 ColumnNameChangedExt.columnChanged=\u7ED3\u70B9: {0} \u5217\u6539\u53D8: {1}-> {2}
 ComponentsFormatPreferencePage.add=\u589E\u52A0
-ComponentsFormatPreferencePage.errorCreateConnectionName=\u547D\u540D"{0}"\u65E0\u6548
+ComponentsFormatPreferencePage.errorCreateConnectionName=\u547D\u540D\"{0}\"\u65E0\u6548
 ComponentsFormatPreferencePage.formatConnection=\u683C\u5F0F\u5316\u9ED8\u8BA4\u8FDE\u63A5
 ComponentsFormatPreferencePage.formatHint=\u683C\u5F0F\u63D0\u793A\u9ED8\u8BA4\u503C\uFF1A
 ComponentsFormatPreferencePage.formatLable=\u683C\u5F0F\u5316\u9ED8\u8BA4\u6807\u7B7E
@@ -34,7 +34,7 @@ ContextComposite.treeValue=\u6811\u683C\u5F0F\u503C
 ContextComposite.variable=\u53D8\u91CF
 ContextParameterProposal.ContextVariable=\\n\\n\u4E0A\u4E0B\u6587\u53D8\u91CF\u3002
 ContextParameterProposal.Description=\u63CF\u8FF0\uFF1A{0}
-ContextValueErrorChecker.ErrorTitile=\u4E0A\u4E0B\u6587\u503C\u9519\u8BEF: 
+ContextValueErrorChecker.ErrorTitile=\u4E0A\u4E0B\u6587\u503C\u9519\u8BEF:
 ContextParameterProposal.NoCommentAvaiable=\u6CA1\u6709\u6CE8\u91CA\u3002
 ContextParameterProposal.Type=\\n\u7C7B\u578B\uFF1A{1}
 ContextParameterProposal.VariableName=\\n\\n\u53D8\u91CF\u540D\u79F0\uFF1A{2}
@@ -214,7 +214,7 @@ MetadataTalendTypeEditor.editMappingDialog.title=\u7F16\u8F91Mapping\u6587\u4EF6
 MetadataTalendTypeEditor.error.message=\u9519\u8BEF\u4FE1\u606F
 MetadataTalendTypeEditor.fileIsImported=\u6587\u4EF6\u5DF2\u5B58\u5728\u3002
 MetadataTalendTypeEditor.fileIsInvalid=\u5BFC\u5165\u6587\u4EF6\u4E0D\u5408\u6CD5\u3002
-MetadataTalendTypeEditor.fileNameStartRule=\u6587\u4EF6\u540D\u5FC5\u987B\u4EE5'mapping_'\u5F00\u5934\u3002
+MetadataTalendTypeEditor.fileNameStartRule=\u6587\u4EF6\u540D\u5FC5\u987B\u4EE5\'mapping_\'\u5F00\u5934\u3002
 MetadataTool.errorMessage=\u65E0\u6CD5\u8F93\u5165\u5F53\u524D\u5B57\u7B26\u3002
 MetadataTool.invalid=\u65E0\u6548\u503C
 MetadataTool.invalidChar=\u65E0\u6548\u5B57\u7B26
@@ -306,7 +306,6 @@ SchemaOperationChoiceDialog.EditSchemaMessage=\u7F16\u8F91 schema\u3002
 SchemaOperationChoiceDialog.Message=\u8BF7\u9009\u62E9\u4E00\u4E2A\u9009\u9879\u6216\u53D6\u6D88\u3002
 SchemaOperationChoiceDialog.Option=\u9009\u9879
 SchemaOperationChoiceDialog.StatusMessage=\u65E0\u6548\u6216\u5DF2\u5B58\u5728\u7684\u56FE\u89E3
-SchemaOperationChoiceDialog.Title=\u67B6\u6784
 SchemaOperationChoiceDialog.ViewSchemaMessage=\u67E5\u770B schema (\u53EA\u8BFB)\u3002
 SchemaXPathQuerysDialog.Mappings=\u6620\u5C04
 SelectRepositoryContextDialog.DeselectAll=\u5168\u90E8\u4E0D\u9009
@@ -339,7 +338,6 @@ XmlArray.InvalidFile=\u65E0\u6548\u7684\u6587\u4EF6\u3002
 XPathQueryMetadataTableEditorViewExt.xpathQuerys=\u8DEF\u5F84\u67E5\u8BE2\u6982\u8981
 XSDValidater.IllegalArgument=\u8F93\u5165\u7684XSD\u6587\u4EF6\u5E76\u4E0D\u5B58\u5728\u3002
 EUpdateItemType.Property=\u5C5E\u6027
-EUpdateItemType.Schema=\u67B6\u6784
 EUpdateItemType.SAPFunction=SAP \u51FD\u6570
 EUpdateItemType.SAPIDoc=SAP IDoc
 EUpdateItemType.Query=\u67E5\u8BE2
@@ -406,7 +404,7 @@ BusinessAppearanceComposite.textAlignment.horizontal.centre=\u4E2D\u592E
 BusinessAppearanceComposite.textAlignment.vertical.top=\u9876\u90E8
 BusinessAppearanceComposite.textAlignment.vertical.bottom=\u5E95\u90E8
 BusinessAppearanceComposite.textAlignment.vertical.centre=\u4E2D\u592E
-ConnectionBean.Local= \u672C\u5730
+ConnectionBean.Local=\u672C\u5730
 ConnectionBean.DefaultConnection=\u9ED8\u8BA4\u8FDE\u63A5
 InegerCellEditorListener.NegativeNumberMessage={0} \u7684\u503C\u4E0D\u80FD\u8BBE\u5B9A\u4E3A\u8D1F\u6570\u3002
 InegerCellEditorListener.NumeralMessage={0} \u7684\u503C\u5E94\u8BE5\u4E3A\u6570\u5B57\u3002
@@ -419,13 +417,13 @@ ProposalUtils.CellProposal.Error=\u5BF9\u6B64\u7C7B\u578B CellEditor \u7684\u63D
 ProposalUtils.CtrlProposal.ErrorMsg=\u5BF9\u6B64\u7C7B\u578B\u63A7\u5236\u7684\u63D0\u8BAE\u4E0D\u53D7\u652F\u6301:
 ExtractMetaDataUtils.missDriver.1=\u627E\u4E0D\u5230\u7C7B\uFF1A
 ExtractMetaDataUtils.missDriver.2=\u7F3A\u5C11 JDBC \u9A71\u52A8\u7A0B\u5E8F\uFF1A
-DqRepositoryViewService.NO_CATALOGS=\u6CA1\u6709\u7ED9\u5B9A\u76EE\u5F55.\u65E0\u6CD5\u68C0\u7D22\u8868\!
+DqRepositoryViewService.NO_CATALOGS=\u6CA1\u6709\u7ED9\u5B9A\u76EE\u5F55.\u65E0\u6CD5\u68C0\u7D22\u8868\\!
 DqRepositoryViewService.NONE_NULL_FUNCTION_NAME=\u51FD\u6570\u540D\u4E0D\u80FD\u4E3A\u7A7A
 CommonWizard.exception=\u5F02\u5E38
 CheckConnection.CheckSchema.ProposeSchema.title=\u66FF\u6362\u6570\u636E\u5E93\u4E3A\u5236\u5B9A\u9879
 CheckConnection.CheckSchema.ProposeSchema.message=\u65E0\u6CD5\u627E\u5230\u4ECE\u6570\u636E\u5E93\u4E2D\u586B\u5145\u7684\u67B6\u6784[ { 0 } ] , \u4F60\u60F3\u4F7F\u7528[ { 1 } ] ?
 NetezzaConnectionFiller.emptyCalalogName=\u76EE\u5F55\u540D\u79F0\u4E3A\u7A7A\uFF01
-DBConnectionFillerImpl.dbmsIdIsBlank=DBMS ID\u4E3A\u7A7A\!
+DBConnectionFillerImpl.dbmsIdIsBlank=DBMS ID\u4E3A\u7A7A\\!
 EmbeddedHiveDataBaseMetadata.functionNotSupportMessage=\u5728Windows\u4E2D\u4E0D\u652F\u6301\u5D4C\u5165\u5F0F\u6A21\u5F0F
 PropertiesWizardPage.SameAsProjectname=\u540D\u79F0\u4E0E\u5DE5\u7A0B\u540D\u79F0\u76F8\u540C\u3002
 HiveConnectionManager.getConnection.timeout=\u8FDE\u63A5\u8D85\u65F6\u3002(\u8D85\u65F6\u53EF\u4EE5\u5728 [\u9996\u9009\u9879/Talend/\u6027\u80FD>\u8FDE\u63A5\u8D85\u65F6] \u4E2D\u914D\u7F6E)
