--- a/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_ar.properties
+++ b/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_ar.properties
@@ -53,3 +53,4 @@ XmlFileStep1.filepathXml=XML
 XmlFileStep1Form.limitation=\u0627\u0644\u062D\u062F
 OpenXSDFileDialog.confirm=\u062A\u0623\u0643\u064A\u062F
 DatabaseTableForm.confirm=\u062A\u0623\u0643\u064A\u062F
+DatabaseForm.DataBase=\u0642\u0627\u0639\u062F\u0629 \u0628\u064A\u0627\u0646\u0627\u062A
