--- a/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_ja.properties
+++ b/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_ja.properties
@@ -34,7 +34,7 @@ ContextSetsSelectionDialog.Title=\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u306E\u907
 CommonWizard.cancel=\u30AD\u30E3\u30F3\u30BB\u30EB
 CommonWizard.exception=\u4F8B\u5916
 CommonWizard.nameAlreadyExist=\u3053\u306E\u540D\u524D\u306F\u65E2\u306B\u5B58\u5728\u3057\u307E\u3059
-CommonWizard.persistenceException=\u30C7\u30FC\u30BF\u306E\u30A2\u30AF\u30BB\u30B9\u306E\u5931\u6557 {0}\n
+CommonWizard.persistenceException=\u30C7\u30FC\u30BF\u306E\u30A2\u30AF\u30BB\u30B9\u306E\u5931\u6557 {0}\\n
 ContextWizard.Title=\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u30B0\u30EB\u30FC\u30D7\u306E\u4F5C\u6210/\u7DE8\u96C6
 ContextWizard.contextPageDescription=\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u3001\u5909\u6570\u304A\u3088\u3073\u5024\u3092\u5B9A\u7FA9\u3057\u307E\u3059\u3002
 ContextWizard.contextPageTitle=\u30B9\u30C6\u30C3\u30D7 2/2
@@ -118,7 +118,7 @@ DatabaseTableForm.navigatorTree=\u30B9\u30AD\u30FC\u30DE
 DatabaseTableForm.retreiveButtonAlert=\u201D\u30B9\u30AD\u30FC\u30DE\u306E\u53D6\u5F97\u201D\u3092\u4F7F\u7528\u3059\u308B\u305F\u3081\u306B\u306F\u3001\u6700\u521D\u306B\u30C6\u30FC\u30D6\u30EB\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 DatabaseTableForm.retreiveButtonConfirmation=\u5909\u66F4\u3092\u78BA\u8A8D\u3057\u307E\u3059\u304B\uFF1F
 DatabaseTableForm.retreiveButtonConfirmationMessage=\u30B9\u30AD\u30FC\u30DE\u306E\u8A2D\u5B9A\u3092\u5909\u66F4\u3059\u308B\u3068\u3001\u73FE\u5728\u306E\u30B9\u30AD\u30FC\u30DE\u30D7\u30EC\u30D3\u30E5\u30FC\u3068\u7570\u306A\u308A\u307E\u3059\u3002\u30B9\u30AD\u30FC\u30DE\u306E\u66F4\u65B0\u306F\u5168\u3066\u306E\u30AB\u30EC\u30F3\u30C8\u30C7\u30FC\u30BF\u306B\u4E0A\u66F8\u304D\u3055\u308C\u307E\u3059\u3002\u7D99\u7D9A\u3057\u307E\u3059\u304B\uFF1F
-DatabaseTableForm.retreiveButtonIsAccessible="\u53D6\u5F97"\u30DC\u30BF\u30F3\u306F\u73FE\u5728\u30A2\u30AF\u30BB\u30B9\u53EF\u80FD\u3067\u3059\u3002
+DatabaseTableForm.retreiveButtonIsAccessible=\"\u53D6\u5F97\"\u30DC\u30BF\u30F3\u306F\u73FE\u5728\u30A2\u30AF\u30BB\u30B9\u53EF\u80FD\u3067\u3059\u3002
 DatabaseTableForm.retreiveButtonTip=\u30B9\u30AD\u30FC\u30DE\u3092\u5B9A\u7FA9\u3057\u3066\u4E0B\u3055\u3044\u3002\u300C\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u3092\u53D6\u5F97\u300D\u304C\u4F7F\u7528\u3067\u304D\u307E\u3059
 DatabaseTableForm.retreiveButtonUse=\u300C\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u3092\u53D6\u5F97\u300D\u3067\u73FE\u5728\u306E\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u3092\u66F4\u65B0\u3067\u304D\u307E\u3059
 DatabaseTableForm.retreiveSchema=\u30B9\u30AD\u30FC\u30DE\u306E\u53D6\u5F97
