--- a/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_zh_CN.properties
@@ -74,7 +74,6 @@ DatabaseForm.otherDBRegex=[0-9] *
 DatabaseForm.password=\u5bc6\u7801
 DatabaseForm.port=\u7aef\u53e3
 DatabaseForm.portError=\u65e0\u6548\u7aef\u53e3\u53f7
-DatabaseForm.schema=\u67B6\u6784
 DatabaseForm.selectJar=\u9009\u62E9jar\u6587\u4EF6
 DatabaseForm.selectRule=\u9009\u62E9\u6620\u5C04\u89C4\u5219
 DatabaseForm.server=\u670d\u52a1\u5668
@@ -105,30 +104,28 @@ DatabaseTableFilterForm.view=\u89c6\u56fe
 DatabaseTableForm.AddTable=\u52a0\u5165 Schema
 DatabaseTableForm.checkConnection=\u68c0\u67e5\u8fde\u63a5
 DatabaseTableForm.comment=\u6CE8\u89E3
-DatabaseTableForm.connectionFailure=\u6570\u636E\u5E93\u8FDE\u63A5\u5931\u8D25 \: "\u68C0\u7D22\u6A21\u5F0F"\u88AB\u7981\u7528. \u6309\u201C\u68C0\u67E5\u8FDE\u63A5\u201D\u91CD\u7F6E.
+DatabaseTableForm.connectionFailure=\u6570\u636E\u5E93\u8FDE\u63A5\u5931\u8D25 \\: \"\u68C0\u7D22\u6A21\u5F0F\"\u88AB\u7981\u7528. \u6309\u201C\u68C0\u67E5\u8FDE\u63A5\u201D\u91CD\u7F6E.
 DatabaseTableForm.connectionFailureTip=\u6570\u636e\u5e93\u8fde\u63a5\u5931\u8d25\uff0c\u8bf7\u68c0\u67e5\u6570\u636e\u5e93\u8bbe\u7f6e\u6216\u4e0e\u6570\u636e\u5e93\u7ba1\u7406\u5458\u8054\u7cfb\u3002
 DatabaseTableForm.connectionIsDone=\u8FDE\u63A5\u6210\u529F
 DatabaseTableForm.getDetailedSchema=\u6309\u6B64\u6309\u94AE\u83B7\u53D6\u8BE6\u7EC6\u7684schema\u4FE1\u606F.
 DatabaseTableForm.getRoughSchema=\u6309\u6B64\u6309\u94AE\u83B7\u53D6\u6982\u7565schema\u4FE1\u606F.
-DatabaseTableForm.groupMetaData=\u67B6\u6784
 DatabaseTableForm.metadataDefaultNewLabel=\u65b0\u5217
 DatabaseTableForm.name=\u4f5c\u4e1a\u540d
 DatabaseTableForm.nameAlert=\u4E00\u4E2ASchema\u540D\u79F0\u4E3A\u7A7A\uFF0C\u5FC5\u987B\u547D\u540D
-DatabaseTableForm.navigatorTree=\u67B6\u6784
 DatabaseTableForm.retreiveButtonAlert=\u8981\u4f7f\u7528\u201c\u53d6\u56de Schema\u201d\u6309\u94ae\uff0c\u8bf7\u5148\u9009\u62e9\u4e00\u4e2a\u8868\u683c\u3002
 DatabaseTableForm.retreiveButtonConfirmation=\u786E\u8BA4\u66F4\u6539
 DatabaseTableForm.retreiveButtonConfirmationMessage=Schema\u8BBE\u7F6E\u5DF2\u66F4\u6539,\u4E0E\u5F53\u524DSchema\u9884\u89C8\u4E0D\u540C. \u66F4\u65B0Schema\u5C06\u8986\u76D6\u6240\u6709\u5F53\u524D\u6570\u636E.\u662F\u5426\u7EE7\u7EED\u66F4\u65B0?
-DatabaseTableForm.retreiveButtonIsAccessible="\u68C0\u7D22"\u6309\u94AE\u73B0\u5728\u53EF\u4EE5\u4F7F\u7528.
-DatabaseTableForm.retreiveButtonTip=\u5FC5\u987B\u5B9A\u4E49Schema. \u4F7F\u7528"\u68C0\u7D22Schema"\u6309\u94AE\u4EE5\u8282\u7701\u65F6\u95F4 \!
+DatabaseTableForm.retreiveButtonIsAccessible=\"\u68C0\u7D22\"\u6309\u94AE\u73B0\u5728\u53EF\u4EE5\u4F7F\u7528.
+DatabaseTableForm.retreiveButtonTip=\u5FC5\u987B\u5B9A\u4E49Schema. \u4F7F\u7528\"\u68C0\u7D22Schema\"\u6309\u94AE\u4EE5\u8282\u7701\u65F6\u95F4 \\\\!
 DatabaseTableForm.retreiveButtonUse=\u4f7f\u7528\u201c\u53d6\u56de Schema\u201d\u6309\u94ae,\u7528\u57fa\u4e8e\u8868\u683c\u7684 Schema \u66ff\u6362\u5f53\u524dSchema
 DatabaseTableForm.retreiveSchema=\u521b\u5efa Schema
 DatabaseTableForm.guessSchema=\u8BA1\u7B97schema
 DatabaseTableForm.streamDetach=\u6d41\u5206\u9694
 DatabaseTableForm.table=\u57fa\u672c\u8868\u683c
 DatabaseTableForm.tableColumnText.talbe=\u8868\u683C
-DatabaseTableForm.tableNoExist=\u6570\u636E\u5E93\u8FDE\u63A5\u6210\u529F,\u4F46\u8868\u4E0D\u5B58\u5728 \: "\u68C0\u7D22Shema"\u88AB\u7981\u7528. \n \u4F7F\u7528SGBD\u521B\u5EFA\u8868,\u7136\u540E\u5355\u51FB\u201C\u68C0\u67E5\u8FDE\u63A5\u201D\u91CD\u7F6E.
-DatabaseTableForm.tableTip=\u9009\u62E9\u4E00\u4E2A\u8868\u5E76\u4F7F\u7528"\u68C0\u7D22"\u6309\u94AE\u6216\u624B\u52A8\u5B9A\u4E49Schema.
-DatabaseTableForm.type=\u7C7B\u578B \: {0}
+DatabaseTableForm.tableNoExist=\u6570\u636E\u5E93\u8FDE\u63A5\u6210\u529F,\u4F46\u8868\u4E0D\u5B58\u5728 \\: \"\u68C0\u7D22Shema\"\u88AB\u7981\u7528. \\n \u4F7F\u7528SGBD\u521B\u5EFA\u8868,\u7136\u540E\u5355\u51FB\u201C\u68C0\u67E5\u8FDE\u63A5\u201D\u91CD\u7F6E.
+DatabaseTableForm.tableTip=\u9009\u62E9\u4E00\u4E2A\u8868\u5E76\u4F7F\u7528\"\u68C0\u7D22\"\u6309\u94AE\u6216\u624B\u52A8\u5B9A\u4E49Schema.
+DatabaseTableForm.type=\u7C7B\u578B \\: {0}
 DatabaseTableForm.typeTable=\u7C7B\u578B: TABLE
 DatabaseTableWizard.description=\u8FC7\u6EE4\u8868
 DatabaseWizard.windowTitle=\u6570\u636E\u5E93\u8FDE\u63A5
@@ -147,7 +144,7 @@ DelimitedFileWizard.windowTitleCreate=\u65b0\u5206\u9694\u578b\u6587\u4ef6
 DelimitedFileWizard.windowTitleUpdate=\u7f16\u8f91\u5206\u9694\u578b\u6587\u4ef6
 DocumentationCreateWizard.mainPageDescription=\u521b\u5efa\u63cf\u8ff0
 DocumentationCreateWizard.windowTitle=\u65b0\u6587\u6863
-DocumentationPage.LinkLabel=\ \u5C06\u6587\u6863\u590D\u5236\u5230\u5B58\u50A8\u5E93.
+DocumentationPage.LinkLabel=\\ \u5C06\u6587\u6863\u590D\u5236\u5230\u5B58\u50A8\u5E93.
 DocumentationPage.browseBtnText.browse=\u6D4F\u89C8...
 DocumentationPage.checkLabel=\u68C0\u67E5
 DocumentationPage.checkTipText=\u68C0\u67E5\u8FDC\u7AEF\u6587\u4EF6\u662F\u5426\u5B58\u5728
@@ -239,7 +236,7 @@ FileStep2.limitTip=\u9650\u5236
 FileStep2.mustBePrecised=\u5fc5\u987b\u8bbe\u7f6e
 FileStep2.noresult=\u8FD9\u4E9B\u8BBE\u7F6E\u6CA1\u6709\u7ED3\u679C
 FileStep2.noresultDetailMessage=\u8BF7\u68C0\u67E5\u6B63\u786E\u7684 XPathExpression \u6216 XML \u6E90\u6587\u6863\u3002
-FileStep2.previewFailure=\u9884\u89C8\u9519\u8BEF\u3002\u5FC5\u987B\u4FEE\u6539\u8BBE\u7F6E\u3002\n\uFF08\u9519\u8BEF\u7684\u5B57\u7B26\u7F16\u7801\uFF09
+FileStep2.previewFailure=\u9884\u89C8\u9519\u8BEF\u3002\u5FC5\u987B\u4FEE\u6539\u8BBE\u7F6E\u3002\\n\uFF08\u9519\u8BEF\u7684\u5B57\u7B26\u7F16\u7801\uFF09
 FileStep2.previewIsDone=\u9884\u89c8\u6210\u529f...
 FileStep2.previewProgress=\u9884\u89c8\u5904\u7406\u4e2d...
 FileStep2.refreshPreview=\u66f4\u65b0\u9884\u89c8
@@ -261,8 +258,7 @@ FileStep2Form.output=\u6807\u51c6\u8f93\u51fa
 FileStep2Form.preview=\u9884
 FileStep3Form.nameInvalid=\u540D\u79F0\u65E0\u6548
 FileStep3.filepathAlert=\u6587\u4ef6\u8def\u5f84\u987b\u88ab\u6307\u5b9a
-FileStep3.groupMetadata=\u67B6\u6784
-FileStep3.guess=\u731C\u6D4B\n
+FileStep3.guess=\u731C\u6D4B
 FileStep3.guessConfirmation=\u786e\u5b9a\u4fee\u6539\uff1f
 FileStep3.guessConfirmationMessage=Schema \u8BBE\u7F6E\u5DF2\u66F4\u6539\u5E76\u4E14\u4E0E\u5F53\u524D\u7684 schema \u9884\u89C8\u4E0D\u540C\u3002\u66F4\u65B0 schema \u5C06\u6539\u5199\u5F53\u524D\u6240\u6709\u6570\u636E\u3002\u5982\u679C\u60A8\u9009\u62E9\u53D6\u6D88\uFF0C\u5C06\u4E0D\u4F1A\u6539\u5199\u5F53\u524D\u6570\u636E\u3002\u4ECD\u7136\u7EE7\u7EED\uFF1F
 FileStep3.guessFailure=\u8ba1\u7b97\u5931\u8d25
@@ -385,7 +381,6 @@ SalesforceStep2Form.output=\u6807\u51c6\u8f93\u51fa
 SalesforceStep2Form.preview=\u9884
 SalesforceStep2Form.queryCondition=\u6D4F\u89C8\u6570\u636E\u5217\u5E76\u8BBE\u5B9A\u67E5\u8BE2\u6761\u4EF6
 SalesforceStep2Form.saleforceDetail=Salesforce \u6A21\u5757\u5B57\u6BB5\u8BE6\u7EC6\u4FE1\u606F
-SchemaWizard.windowTitle=\u67B6\u6784
 SelectDatabaseJarDialog.add=\u589E\u52A0
 SelectDatabaseJarDialog.delete=\u5220\u9664
 SelectDatabaseJarDialog.title=\u9009\u62E9\u6570\u636E\u5E93\u9A71\u52A8\u7A0B\u5E8F jar
@@ -408,7 +403,6 @@ ShowAddedContextdialog.Messages=\u662F\u5426\u5E94\u5F53\u5C06\u4EE5\u4E0B\u4E0A
 ShowAddedContextdialog.Title=\u5DF2\u6DFB\u52A0\u7684\u4E0A\u4E0B\u6587
 ShowAddedContextdialog.Variables=\u53D8\u91CF
 StoppablePreviewLoader.inforLabelText.previewInterrupted=\u9884\u89c8\u7ec8\u65ad
-TableWizard.windowTitle=\u67B6\u6784
 TableWizardPage.descriptionCreate=\u5411\u50a8\u5b58\u5e93\u91cc\u52a0\u5165\u4e00\u4e2a\u56fe\u89e3
 TableWizardPage.descriptionUpdate=\u66f4\u65b0\u76ee\u524d\u5b58\u5728\u7684\u50a8\u5b58\u5e93\u91cc\u7684\u56fe\u89e3
 TableWizardPage.titleCreate=\u65b0\u8fde\u63a5\u91cc\u7684 Schema \u8868
@@ -429,7 +423,7 @@ WSDLSchemaStep1Form.UseProxy=\u4F7F\u7528http\u4EE3\u7406
 WSDLSchemaStep1Form.UserName=\u7528\u6237
 WSDLSchemaStep1Form.WSDLGroupParameter=WSDL \u53C2\u6570
 WSDLSchemaStep1Form.WSDLName=WSDL
-WSDLSchemaStep1Form.WSDLURL=http\://www.atomic-x.com/xmlservices/imageextractorws.asmx?wsdl
+WSDLSchemaStep1Form.WSDLURL=http\\://www.atomic-x.com/xmlservices/imageextractorws.asmx?wsdl
 WSDLSchemaStep1Form.output=\u6807\u51c6\u8f93\u51fa
 WSDLSchemaStep1Form.preview=\u9884
 WSDLSchemaStep1Form.TimeOutTitle=\u8D85\u65F6\uFF08\u79D2\uFF09
@@ -460,7 +454,7 @@ MetadataTalendTypeEditor.editMappingDialog.title=\u7F16\u8F91Mapping\u6587\u4EF6
 MetadataTalendTypeEditor.error.message=\u9519\u8BEF\u4FE1\u606F
 MetadataTalendTypeEditor.fileIsImported=\u6B64\u6587\u4EF6\u5DF2\u88AB\u5BFC\u5165\u3002
 MetadataTalendTypeEditor.fileIsInvalid=\u5BFC\u5165\u6587\u4EF6\u4E0D\u5408\u6CD5\u3002
-MetadataTalendTypeEditor.fileNameStartRule=\u6587\u4EF6\u540D\u5FC5\u987B\u4EE5'mapping_'\u5F00\u5934\u3002
+MetadataTalendTypeEditor.fileNameStartRule=\u6587\u4EF6\u540D\u5FC5\u987B\u4EE5\'mapping_\'\u5F00\u5934\u3002
 RepositoryToComponentProperty.xmlFileSelection=\u9009\u62E9\u8981\u9A8C\u8BC1\u7684 XML \u6587\u4EF6
 OpenXSDFileDialog.cancel=\u53D6\u6D88
 OpenXSDFileDialog.confirm=\u786E\u5B9A
@@ -471,7 +465,7 @@ PropertiesWizard.EditPropertiesPageTitle=\u7F16\u8F91\u5C5E\u6027
 PropertiesWizard.alreadyLockedByUser=\u56E0\u4E3A\u8FD9\u4E2A\u9879\u76EE\u5DF2\u88AB\u4E00\u4F4D\u7F16\u8F91\u8005\u9501\u5B9A\uFF0C\u6240\u4EE5\u5176\u5C5E\u6027\u4E3A\u53EA\u8BFB\u3002
 AbstractSalesforceStepForm.fetchModule=\u8FDE\u63A5\u5230\u9500\u552E\u670D\u52A1\u5E73\u53F0\uFF0C\u4EE5\u83B7\u53D6\u6570\u636E\u5217
 FileTableWizardPage.titleUpdate=\u66f4\u65b0\u56fe\u89e3 \u201c{0}\u201d
-XmlFileStep1Form.notFound="{0}"\u4E0D\u5B58\u5728\u6216\u8005xml\u683C\u5F0F\u4E0D\u6B63\u786E
+XmlFileStep1Form.notFound=\"{0}\"\u4E0D\u5B58\u5728\u6216\u8005xml\u683C\u5F0F\u4E0D\u6B63\u786E
 SalesforceStep2Form.module=\u6a21\u5757
 DatabaseTableForm.confirm=\u786E\u5B9A
 DatabaseTableForm.detete_table=\u786E\u5B9A\u5220\u9664schema ?
@@ -490,7 +484,7 @@ ConfirmReloadConnectionDialog.title=\u786E\u8BA4\u91CD\u65B0\u52A0\u8F7D\u8FDE\u
 ConfirmReloadConnectionDialog.desc=\u8FDE\u63A5\u5C5E\u6027\u6539\u53D8\uFF0C\u8FD9\u4E2A\u8FDE\u63A5\u7684\u5206\u6790\u5143\u7D20\u5982\u679C\u91CD\u65B0\u52A0\u8F7D\u5B83\u53EF\u80FD\u4F1A\u88AB\u79FB\u9664\uFF0C\u662F\u5426\u7EE7\u7EED\uFF1F
 ConfirmReloadConnectionDialog.reload=\u91CD\u65B0\u52A0\u8F7D
 ConfirmReloadConnectionDialog.unreload=\u4E0D\u8981\u91CD\u65B0\u52A0\u8F7D
-FileTableWizardPage.titleCreate=\u65b0\u56fe\u89e3"{0}"
+FileTableWizardPage.titleCreate=\u65b0\u56fe\u89e3\"{0}\"
 SalesforceWizardPage.titleCreate.Step=\u5728\u5B58\u50A8\u5E93\u4E2D\u65B0\u5EFA Salesforce \u8FDE\u63A5 - \u6B65\u9AA4
 SalesforceWizardPage.descriptionCreate.Step1=\u6570\u636e\u53c2\u6570\u8bbe\u7f6e
 SalesforceWizardPage.descriptionCreate.Step2=\u5B9A\u4E49 Salesforce \u8FDE\u63A5\u53C2\u6570
