--- a/i18n/plugins/org.talend.model.edit.nl/plugin_ar.properties
+++ b/i18n/plugins/org.talend.model.edit.nl/plugin_ar.properties
@@ -345,3 +345,4 @@ _UI_InnerJoinMap_value_feature=\u0642\u064A\u0645\u0629
 _UI_Operator_Lower_literal=<
 _UI_Operator_Greater_or_equals_literal=>=
 _UI_Operator_Lower_or_equals_literal=<=
+_UI_DashboardConnection_database_feature=\u0642\u0627\u0639\u062F\u0629 \u0628\u064A\u0627\u0646\u0627\u062A
