--- a/i18n/plugins/org.talend.repository.mdm.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.repository.mdm.nl/src/main/java/messages_zh_CN.properties
@@ -95,9 +95,8 @@ MdmReceiveForm.noExist=\u4e0d\u5b58\u5728
 MdmReceiveForm.previewNotAvailable=\u6CA1\u6709\u53EF\u884C\u7684XSD\u6587\u4EF6\u9884\u89C8
 FileStep3.metadataName=\u4f5c\u4e1a\u540d
 FileStep3.metadataComment=\u6CE8\u89E3
-FileStep3.groupMetadata=\u67B6\u6784
 FileStep3.informationLabel=\u70b9\u51fb\u8ba1\u7b97\u8ddf\u636e\u5f53\u524d\u8bbe\u7f6e\u66f4\u65b0 Schema
-FileStep3.guess=\u731C\u6D4B\n
+FileStep3.guess=\u731C\u6D4B
 FileStep3.guessTip=\u70b9\u51fb\u66f4\u65b0\u9884\u89c8
 FileStep3.metadataDescription=\u56fe\u89e3\u7684\u63cf\u8ff0
 FileStep3.guessConfirmation=\u786e\u5b9a\u4fee\u6539\uff1f
