--- a/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_ar.properties
+++ b/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_ar.properties
@@ -130,3 +130,4 @@ OpenXSDFileDialog.confirm=\u062A\u0623\u0643\u064A\u062F
 XmlFileStep2Form.Output=\u0645\u062E\u0631\u062C
 DatabaseForm.hbase.settings=\u0627\u0644\u0625\u0635\u062F\u0627\u0631
 DatabaseForm.distroVersion.labelName=\u0627\u0644\u0625\u0635\u062F\u0627\u0631
+DatabaseForm.DataBase=\u0642\u0627\u0639\u062F\u0629 \u0628\u064A\u0627\u0646\u0627\u062A
