fix(TUP-21346)XSD File not creating all columns in Schema (#2148)
* fix(TUP-21346)XSD File not creating all columns in Schema

* fix(TUP-21346)settings in the preference is useless  when  edit the xml
metadata

* fix(TUP-21346)settings in the preference is useless when edit the xml

* fix(TUP-21346)settings in the preference is useless when edit the xml

* fix(TUP-21346)settings in the preference is useless when edit the xml

* fix(TUP-21346)settings in the preference is useless when edit the xml

* fix(TUP-21346)settings in the preference is useless when edit the xml

* fix(TUP-21346)improve the ui

* fix(TUP-21346)XSD File not creating all columns in Schema

* fix(TUP-21346)XSD File not creating all columns in Schema

* fix(TUP-21346)XSD File not creating all columns in Schema

--- a/main/plugins/org.talend.repository.metadata/src/main/java/org/talend/repository/metadata/i18n/messages.properties
+++ b/main/plugins/org.talend.repository.metadata/src/main/java/org/talend/repository/metadata/i18n/messages.properties
@@ -1421,7 +1421,7 @@ XmlToXPathLinker.illegalArgumentException=This type of currentControl is unsuppo
 XmlFileSelectWizardPage.Input_XML=Input XML
 XmlFileSelectWizardPage.OutPut_XML=OutPut XML
 XmlFileOutputStep1Form.Encording=Encording
-XmlFileOutputStep2Form.Error=You could increase maximum amount columns in 'Preferences/Talend/Metadata' to show all columns of schema\n
+XmlFileOutputStep2Form.refresh=Refresh 'Schema List' viewer
 MetadataTableEditor.ColumnNameIsNull=Error\: Column name is null
 MetadataTalendTypeEditor.button.edit=E&dit
 MetadataTalendTypeEditor.button.export=E&xport
