feat(TDQ-16567): support amazon aurora for DQ side (#2295)

--- a/main/plugins/org.talend.repository.metadata/src/main/java/org/talend/repository/metadata/i18n/messages.properties
+++ b/main/plugins/org.talend.repository.metadata/src/main/java/org/talend/repository/metadata/i18n/messages.properties
@@ -1457,3 +1457,4 @@ DatabaseForm.ZnodeParent.checkBtn=Set Zookeeper znode parent
 DatabaseForm.maprdb.tableInfo.tableNSMapping.label=Table Namespace mappings
 DatabaseForm.set_table_ns_mapping.checkBtn=Set table Namespace mappings
 BrowerDialog.empryUrl=the url can not be empty
+DatabaseForm.canNotUsableInDataProfiler=some database types are not usable in the Data Profiler perspective.
