fix(TUP-17925)Sybase connection can check successfully even if a wrong db filled (#2214)
* fix(TUP-17925)Sybase connection can check successfully even if a wrong
db filled

* fix(TUP-17925)check database right or not

* fix(TUP-17925)check the database right or not

* fix(TUP-17925)check the database exist or not

* fix(TUP-17928)check the database existed or not

* fix(TUP-17925)connection can check successfully even if a wrong db
filled

* fix(TUP-17925)Sybase connection can check successfully even if a wrong
db filled

--- a/main/plugins/org.talend.metadata.managment/src/main/java/metadata/managment/i18n/messages.properties
+++ b/main/plugins/org.talend.metadata.managment/src/main/java/metadata/managment/i18n/messages.properties
@@ -146,6 +146,7 @@ EMetadataEncoding.UTF8=Unicode 2.0 UTF-8
 ERepositoryObjectType.FolderNotFound=Folder for type {0} cannot be found.
 ERepositoryObjectType.NotImplemented=not implemented
 ExtractMetaDataFromDataBase.SchemaNoPresent=Schema not present in Database
+ExtractMetaDataFromDataBase.DatabaseNoPresent=The database '{0}' not exist
 ExtractMetaDataFromDataBase.connectionSuccessful=Connection successful
 ExtractMetaDataFromDataBase.dbTypeNotFound=dbType '{0}' not found
 ExtractMetaDataUtils.1=Impossible to initialize the connection \!
