fix(TUP-22965):Move sdk component start code to logon project phase. (#2440)

--- a/main/plugins/org.talend.core.repository/src/main/java/org/talend/core/repository/i18n/messages.properties
+++ b/main/plugins/org.talend.core.repository/src/main/java/org/talend/core/repository/i18n/messages.properties
@@ -14,6 +14,7 @@ ProxyRepositoryFactory.CycleReferenceError=The cycle projects reference detected
 ProxyRepositoryFactory.JobNameErroe=Jobname Error
 ProxyRepositoryFactory.Label=Label
 ProxyRepositoryFactory.load.componnents=Load Components...
+ProxyRepositoryFactory.load.sdk.componnents=Load SDK Components...
 ProxyRepositoryFactory.log.Restoration=Restoration [{0}] by {1} to "/{2}".
 ProxyRepositoryFactory.log.lock=Lock [{0}] by "{1}".
 ProxyRepositoryFactory.log.loggedOn={0} logged on {1}
