fixe(TUP-23168):Install external library issues (#2501)

--- a/main/plugins/org.talend.librariesmanager.ui/src/main/java/messages.properties
+++ b/main/plugins/org.talend.librariesmanager.ui/src/main/java/messages.properties
@@ -126,3 +126,5 @@ ConfigModuleDialog.jarNotInstalled.error=This jar is not installed in the artifa
 ImportCustomSettingsAction.title=Import custom settings
 ImportCustomSettingsAction.warning=Are you sure to overwrite the custom mvn uri settings with the selected file ?
 ExportCustomSettingsAction.title=Export custom settings
+
+DownloadModuleRunnable.jar.download.failed=The Download failed for the following jars {0}
